Fix for missing descriptions (#121)

--- a/examples/docusaurus/mistral/docs/api/endpoint/beta/agents.mdx
+++ b/examples/docusaurus/mistral/docs/api/endpoint/beta/agents.mdx
@@ -2233,17 +2233,7 @@ defaultValue: MyDefaultValue
 
 <ExpandablePropertyDescription slot="description">
 
-<DebugPlaceholder>
-
-No description provided
-
-_OpenAPI example:_
-
-```
-description: My awesome description
-```
-
-</DebugPlaceholder>
+Instruction prompt the model will follow during the conversation.
 
 </ExpandablePropertyDescription>
 
@@ -5761,17 +5751,7 @@ defaultValue: MyDefaultValue
 
 <ExpandablePropertyDescription slot="description">
 
-<DebugPlaceholder>
-
-No description provided
-
-_OpenAPI example:_
-
-```
-description: My awesome description
-```
-
-</DebugPlaceholder>
+Instruction prompt the model will follow during the conversation.
 
 </ExpandablePropertyDescription>
 
@@ -9162,17 +9142,7 @@ defaultValue: MyDefaultValue
 
 <ExpandablePropertyDescription slot="description">
 
-<DebugPlaceholder>
-
-No description provided
-
-_OpenAPI example:_
-
-```
-description: My awesome description
-```
-
-</DebugPlaceholder>
+Instruction prompt the model will follow during the conversation.
 
 </ExpandablePropertyDescription>
 
@@ -12902,17 +12872,7 @@ defaultValue: MyDefaultValue
 
 <ExpandablePropertyDescription slot="description">
 
-<DebugPlaceholder>
-
-No description provided
-
-_OpenAPI example:_
-
-```
-description: My awesome description
-```
-
-</DebugPlaceholder>
+Instruction prompt the model will follow during the conversation.
 
 </ExpandablePropertyDescription>
 
@@ -16480,17 +16440,7 @@ defaultValue: MyDefaultValue
 
 <ExpandablePropertyDescription slot="description">
 
-<DebugPlaceholder>
-
-No description provided
-
-_OpenAPI example:_
-
-```
-description: My awesome description
-```
-
-</DebugPlaceholder>
+Instruction prompt the model will follow during the conversation.
 
 </ExpandablePropertyDescription>
 
@@ -19881,17 +19831,7 @@ defaultValue: MyDefaultValue
 
 <ExpandablePropertyDescription slot="description">
 
-<DebugPlaceholder>
-
-No description provided
-
-_OpenAPI example:_
-
-```
-description: My awesome description
-```
-
-</DebugPlaceholder>
+Instruction prompt the model will follow during the conversation.
 
 </ExpandablePropertyDescription>
 
@@ -23672,17 +23612,7 @@ defaultValue: MyDefaultValue
 
 <ExpandablePropertyDescription slot="description">
 
-<DebugPlaceholder>
-
-No description provided
-
-_OpenAPI example:_
-
-```
-description: My awesome description
-```
-
-</DebugPlaceholder>
+Instruction prompt the model will follow during the conversation.
 
 </ExpandablePropertyDescription>
 
