--- a/examples/docusaurus/mistral/docs/api/endpoint/classifiers.mdx
+++ b/examples/docusaurus/mistral/docs/api/endpoint/classifiers.mdx
@@ -2329,17 +2329,7 @@ defaultValue: MyDefaultValue
 
 <ExpandablePropertyDescription slot="description">
 
-<DebugPlaceholder>
-
-No description provided
-
-_OpenAPI example:_
-
-```
-description: My awesome description
-```
-
-</DebugPlaceholder>
+The filename of the document
 
 </ExpandablePropertyDescription>
 
@@ -3581,17 +3571,7 @@ defaultValue: MyDefaultValue
 
 <ExpandablePropertyDescription slot="description">
 
-<DebugPlaceholder>
-
-No description provided
-
-_OpenAPI example:_
-
-```
-description: My awesome description
-```
-
-</DebugPlaceholder>
+The filename of the document
 
 </ExpandablePropertyDescription>
 
@@ -5485,17 +5465,7 @@ defaultValue: MyDefaultValue
 
 <ExpandablePropertyDescription slot="description">
 
-<DebugPlaceholder>
-
-No description provided
-
-_OpenAPI example:_
-
-```
-description: My awesome description
-```
-
-</DebugPlaceholder>
+The filename of the document
 
 </ExpandablePropertyDescription>
 
@@ -8993,17 +8963,7 @@ defaultValue: MyDefaultValue
 
 <ExpandablePropertyDescription slot="description">
 
-<DebugPlaceholder>
-
-No description provided
-
-_OpenAPI example:_
-
-```
-description: My awesome description
-```
-
-</DebugPlaceholder>
+The filename of the document
 
 </ExpandablePropertyDescription>
 
@@ -10245,17 +10205,7 @@ defaultValue: MyDefaultValue
 
 <ExpandablePropertyDescription slot="description">
 
-<DebugPlaceholder>
-
-No description provided
-
-_OpenAPI example:_
-
-```
-description: My awesome description
-```
-
-</DebugPlaceholder>
+The filename of the document
 
 </ExpandablePropertyDescription>
 
@@ -12149,17 +12099,7 @@ defaultValue: MyDefaultValue
 
 <ExpandablePropertyDescription slot="description">
 
-<DebugPlaceholder>
-
-No description provided
-
-_OpenAPI example:_
-
-```
-description: My awesome description
-```
-
-</DebugPlaceholder>
+The filename of the document
 
 </ExpandablePropertyDescription>
 
