--- a/examples/docusaurus/mistral/docs/api/endpoint/fine-tuning/jobs.mdx
+++ b/examples/docusaurus/mistral/docs/api/endpoint/fine-tuning/jobs.mdx
@@ -545,17 +545,7 @@ defaultValue: MyDefaultValue
 
 <ExpandablePropertyDescription slot="description">
 
-<DebugPlaceholder>
-
-No description provided
-
-_OpenAPI example:_
-
-```
-description: My awesome description
-```
-
-</DebugPlaceholder>
+The name of the fine-tuned model that is being created. The value will be `null` if the fine-tuning job is still running.
 
 </ExpandablePropertyDescription>
 
@@ -1279,17 +1269,7 @@ defaultValue: MyDefaultValue
 
 <ExpandablePropertyDescription slot="description">
 
-<DebugPlaceholder>
-
-No description provided
-
-_OpenAPI example:_
-
-```
-description: My awesome description
-```
-
-</DebugPlaceholder>
+A list of integrations enabled for your fine-tuning job.
 
 </ExpandablePropertyDescription>
 
@@ -1413,17 +1393,7 @@ defaultValue: MyDefaultValue
 
 <ExpandablePropertyDescription slot="description">
 
-<DebugPlaceholder>
-
-No description provided
-
-_OpenAPI example:_
-
-```
-description: My awesome description
-```
-
-</DebugPlaceholder>
+A display name to set for the run. If not set, will use the job ID as the name.
 
 </ExpandablePropertyDescription>
 
@@ -3159,17 +3129,7 @@ defaultValue: MyDefaultValue
 
 <ExpandablePropertyDescription slot="description">
 
-<DebugPlaceholder>
-
-No description provided
-
-_OpenAPI example:_
-
-```
-description: My awesome description
-```
-
-</DebugPlaceholder>
+Optional text/code that adds more context for the model. When given a `prompt` and a `suffix` the model will fill what is between them. When `suffix` is not provided, the model will simply execute completion starting with `prompt`.
 
 </ExpandablePropertyDescription>
 
@@ -3227,17 +3187,7 @@ defaultValue: MyDefaultValue
 
 <ExpandablePropertyDescription slot="description">
 
-<DebugPlaceholder>
-
-No description provided
-
-_OpenAPI example:_
-
-```
-description: My awesome description
-```
-
-</DebugPlaceholder>
+Total number of tokens trained.
 
 </ExpandablePropertyDescription>
 
@@ -3353,17 +3303,7 @@ defaultValue: MyDefaultValue
 
 <ExpandablePropertyDescription slot="description">
 
-<DebugPlaceholder>
-
-No description provided
-
-_OpenAPI example:_
-
-```
-description: My awesome description
-```
-
-</DebugPlaceholder>
+A list containing the IDs of uploaded files that contain validation data.
 
 </ExpandablePropertyDescription>
 
@@ -3617,17 +3557,7 @@ defaultValue: MyDefaultValue
 
 <ExpandablePropertyDescription slot="description">
 
-<DebugPlaceholder>
-
-No description provided
-
-_OpenAPI example:_
-
-```
-description: My awesome description
-```
-
-</DebugPlaceholder>
+The name of the fine-tuned model that is being created. The value will be `null` if the fine-tuning job is still running.
 
 </ExpandablePropertyDescription>
 
@@ -4283,17 +4213,7 @@ defaultValue: MyDefaultValue
 
 <ExpandablePropertyDescription slot="description">
 
-<DebugPlaceholder>
-
-No description provided
-
-_OpenAPI example:_
-
-```
-description: My awesome description
-```
-
-</DebugPlaceholder>
+A list of integrations enabled for your fine-tuning job.
 
 </ExpandablePropertyDescription>
 
@@ -4417,17 +4337,7 @@ defaultValue: MyDefaultValue
 
 <ExpandablePropertyDescription slot="description">
 
-<DebugPlaceholder>
-
-No description provided
-
-_OpenAPI example:_
-
-```
-description: My awesome description
-```
-
-</DebugPlaceholder>
+A display name to set for the run. If not set, will use the job ID as the name.
 
 </ExpandablePropertyDescription>
 
@@ -5633,17 +5543,7 @@ defaultValue: MyDefaultValue
 
 <ExpandablePropertyDescription slot="description">
 
-<DebugPlaceholder>
-
-No description provided
-
-_OpenAPI example:_
-
-```
-description: My awesome description
-```
-
-</DebugPlaceholder>
+Optional text/code that adds more context for the model. When given a `prompt` and a `suffix` the model will fill what is between them. When `suffix` is not provided, the model will simply execute completion starting with `prompt`.
 
 </ExpandablePropertyDescription>
 
@@ -5701,17 +5601,7 @@ defaultValue: MyDefaultValue
 
 <ExpandablePropertyDescription slot="description">
 
-<DebugPlaceholder>
-
-No description provided
-
-_OpenAPI example:_
-
-```
-description: My awesome description
-```
-
-</DebugPlaceholder>
+Total number of tokens trained.
 
 </ExpandablePropertyDescription>
 
@@ -5827,17 +5717,7 @@ defaultValue: MyDefaultValue
 
 <ExpandablePropertyDescription slot="description">
 
-<DebugPlaceholder>
-
-No description provided
-
-_OpenAPI example:_
-
-```
-description: My awesome description
-```
-
-</DebugPlaceholder>
+A list containing the IDs of uploaded files that contain validation data.
 
 </ExpandablePropertyDescription>
 
@@ -7039,17 +6919,7 @@ defaultValue: MyDefaultValue
 
 <ExpandablePropertyDescription slot="description">
 
-<DebugPlaceholder>
-
-No description provided
-
-_OpenAPI example:_
-
-```
-description: My awesome description
-```
-
-</DebugPlaceholder>
+The number of training steps to perform. A training step refers to a single update of the model weights during the fine-tuning process. This update is typically calculated using a batch of samples from the training dataset.
 
 </ExpandablePropertyDescription>
 
@@ -7107,17 +6977,7 @@ defaultValue: MyDefaultValue
 
 <ExpandablePropertyDescription slot="description">
 
-<DebugPlaceholder>
-
-No description provided
-
-_OpenAPI example:_
-
-```
-description: My awesome description
-```
-
-</DebugPlaceholder>
+(Advanced Usage) A parameter that specifies the percentage of the total training steps at which the learning rate warm-up phase ends. During this phase, the learning rate gradually increases from a small value to the initial learning rate, helping to stabilize the training process and improve convergence. Similar to `pct_start` in [mistral-finetune](https://github.com/mistralai/mistral-finetune)
 
 </ExpandablePropertyDescription>
 
@@ -7175,17 +7035,7 @@ defaultValue: MyDefaultValue
 
 <ExpandablePropertyDescription slot="description">
 
-<DebugPlaceholder>
-
-No description provided
-
-_OpenAPI example:_
-
-```
-description: My awesome description
-```
-
-</DebugPlaceholder>
+(Advanced Usage) Weight decay adds a term to the loss function that is proportional to the sum of the squared weights. This term reduces the magnitude of the weights and prevents them from growing too large.
 
 </ExpandablePropertyDescription>
 
@@ -7487,17 +7337,7 @@ defaultValue: MyDefaultValue
 
 <ExpandablePropertyDescription slot="description">
 
-<DebugPlaceholder>
-
-No description provided
-
-_OpenAPI example:_
-
-```
-description: My awesome description
-```
-
-</DebugPlaceholder>
+The number of training steps to perform. A training step refers to a single update of the model weights during the fine-tuning process. This update is typically calculated using a batch of samples from the training dataset.
 
 </ExpandablePropertyDescription>
 
@@ -7555,17 +7395,7 @@ defaultValue: MyDefaultValue
 
 <ExpandablePropertyDescription slot="description">
 
-<DebugPlaceholder>
-
-No description provided
-
-_OpenAPI example:_
-
-```
-description: My awesome description
-```
-
-</DebugPlaceholder>
+(Advanced Usage) A parameter that specifies the percentage of the total training steps at which the learning rate warm-up phase ends. During this phase, the learning rate gradually increases from a small value to the initial learning rate, helping to stabilize the training process and improve convergence. Similar to `pct_start` in [mistral-finetune](https://github.com/mistralai/mistral-finetune)
 
 </ExpandablePropertyDescription>
 
@@ -7623,17 +7453,7 @@ defaultValue: MyDefaultValue
 
 <ExpandablePropertyDescription slot="description">
 
-<DebugPlaceholder>
-
-No description provided
-
-_OpenAPI example:_
-
-```
-description: My awesome description
-```
-
-</DebugPlaceholder>
+(Advanced Usage) Weight decay adds a term to the loss function that is proportional to the sum of the squared weights. This term reduces the magnitude of the weights and prevents them from growing too large.
 
 </ExpandablePropertyDescription>
 
@@ -7698,17 +7518,7 @@ defaultValue: MyDefaultValue
 
 <ExpandablePropertyDescription slot="description">
 
-<DebugPlaceholder>
-
-No description provided
-
-_OpenAPI example:_
-
-```
-description: My awesome description
-```
-
-</DebugPlaceholder>
+A list of integrations to enable for your fine-tuning job.
 
 </ExpandablePropertyDescription>
 
@@ -7890,17 +7700,7 @@ defaultValue: MyDefaultValue
 
 <ExpandablePropertyDescription slot="description">
 
-<DebugPlaceholder>
-
-No description provided
-
-_OpenAPI example:_
-
-```
-description: My awesome description
-```
-
-</DebugPlaceholder>
+A display name to set for the run. If not set, will use the job ID as the name.
 
 </ExpandablePropertyDescription>
 
@@ -8859,17 +8659,7 @@ _Default Value:_ `1`
 
 <ExpandablePropertyDescription slot="description">
 
-<DebugPlaceholder>
-
-No description provided
-
-_OpenAPI example:_
-
-```
-description: My awesome description
-```
-
-</DebugPlaceholder>
+A string that will be added to your fine-tuning model name. For example, a suffix of "my-great-model" would produce a model name like `ft:open-mistral-7b:my-great-model:xxx...`
 
 </ExpandablePropertyDescription>
 
@@ -9193,17 +8983,7 @@ _Default Value:_ `1`
 
 <ExpandablePropertyDescription slot="description">
 
-<DebugPlaceholder>
-
-No description provided
-
-_OpenAPI example:_
-
-```
-description: My awesome description
-```
-
-</DebugPlaceholder>
+A list containing the IDs of uploaded files that contain validation data. If you provide these files, the data is used to generate validation metrics periodically during fine-tuning. These metrics can be viewed in `checkpoints` when getting the status of a running fine-tuning job. The same data should not be present in both train and validation files.
 
 </ExpandablePropertyDescription>
 
@@ -9564,17 +9344,7 @@ defaultValue: MyDefaultValue
 
 <ExpandablePropertyDescription slot="description">
 
-<DebugPlaceholder>
-
-No description provided
-
-_OpenAPI example:_
-
-```
-description: My awesome description
-```
-
-</DebugPlaceholder>
+The name of the fine-tuned model that is being created. The value will be `null` if the fine-tuning job is still running.
 
 </ExpandablePropertyDescription>
 
@@ -10298,17 +10068,7 @@ defaultValue: MyDefaultValue
 
 <ExpandablePropertyDescription slot="description">
 
-<DebugPlaceholder>
-
-No description provided
-
-_OpenAPI example:_
-
-```
-description: My awesome description
-```
-
-</DebugPlaceholder>
+A list of integrations enabled for your fine-tuning job.
 
 </ExpandablePropertyDescription>
 
@@ -10432,17 +10192,7 @@ defaultValue: MyDefaultValue
 
 <ExpandablePropertyDescription slot="description">
 
-<DebugPlaceholder>
-
-No description provided
-
-_OpenAPI example:_
-
-```
-description: My awesome description
-```
-
-</DebugPlaceholder>
+A display name to set for the run. If not set, will use the job ID as the name.
 
 </ExpandablePropertyDescription>
 
@@ -12178,17 +11928,7 @@ defaultValue: MyDefaultValue
 
 <ExpandablePropertyDescription slot="description">
 
-<DebugPlaceholder>
-
-No description provided
-
-_OpenAPI example:_
-
-```
-description: My awesome description
-```
-
-</DebugPlaceholder>
+Optional text/code that adds more context for the model. When given a `prompt` and a `suffix` the model will fill what is between them. When `suffix` is not provided, the model will simply execute completion starting with `prompt`.
 
 </ExpandablePropertyDescription>
 
@@ -12246,17 +11986,7 @@ defaultValue: MyDefaultValue
 
 <ExpandablePropertyDescription slot="description">
 
-<DebugPlaceholder>
-
-No description provided
-
-_OpenAPI example:_
-
-```
-description: My awesome description
-```
-
-</DebugPlaceholder>
+Total number of tokens trained.
 
 </ExpandablePropertyDescription>
 
@@ -12372,17 +12102,7 @@ defaultValue: MyDefaultValue
 
 <ExpandablePropertyDescription slot="description">
 
-<DebugPlaceholder>
-
-No description provided
-
-_OpenAPI example:_
-
-```
-description: My awesome description
-```
-
-</DebugPlaceholder>
+A list containing the IDs of uploaded files that contain validation data.
 
 </ExpandablePropertyDescription>
 
@@ -12635,17 +12355,7 @@ defaultValue: MyDefaultValue
 
 <ExpandablePropertyDescription slot="description">
 
-<DebugPlaceholder>
-
-No description provided
-
-_OpenAPI example:_
-
-```
-description: My awesome description
-```
-
-</DebugPlaceholder>
+The name of the fine-tuned model that is being created. The value will be `null` if the fine-tuning job is still running.
 
 </ExpandablePropertyDescription>
 
@@ -13301,17 +13011,7 @@ defaultValue: MyDefaultValue
 
 <ExpandablePropertyDescription slot="description">
 
-<DebugPlaceholder>
-
-No description provided
-
-_OpenAPI example:_
-
-```
-description: My awesome description
-```
-
-</DebugPlaceholder>
+A list of integrations enabled for your fine-tuning job.
 
 </ExpandablePropertyDescription>
 
@@ -13435,17 +13135,7 @@ defaultValue: MyDefaultValue
 
 <ExpandablePropertyDescription slot="description">
 
-<DebugPlaceholder>
-
-No description provided
-
-_OpenAPI example:_
-
-```
-description: My awesome description
-```
-
-</DebugPlaceholder>
+A display name to set for the run. If not set, will use the job ID as the name.
 
 </ExpandablePropertyDescription>
 
@@ -14651,17 +14341,7 @@ defaultValue: MyDefaultValue
 
 <ExpandablePropertyDescription slot="description">
 
-<DebugPlaceholder>
-
-No description provided
-
-_OpenAPI example:_
-
-```
-description: My awesome description
-```
-
-</DebugPlaceholder>
+Optional text/code that adds more context for the model. When given a `prompt` and a `suffix` the model will fill what is between them. When `suffix` is not provided, the model will simply execute completion starting with `prompt`.
 
 </ExpandablePropertyDescription>
 
@@ -14719,17 +14399,7 @@ defaultValue: MyDefaultValue
 
 <ExpandablePropertyDescription slot="description">
 
-<DebugPlaceholder>
-
-No description provided
-
-_OpenAPI example:_
-
-```
-description: My awesome description
-```
-
-</DebugPlaceholder>
+Total number of tokens trained.
 
 </ExpandablePropertyDescription>
 
@@ -14845,17 +14515,7 @@ defaultValue: MyDefaultValue
 
 <ExpandablePropertyDescription slot="description">
 
-<DebugPlaceholder>
-
-No description provided
-
-_OpenAPI example:_
-
-```
-description: My awesome description
-```
-
-</DebugPlaceholder>
+A list containing the IDs of uploaded files that contain validation data.
 
 </ExpandablePropertyDescription>
 
@@ -14982,17 +14642,7 @@ defaultValue: MyDefaultValue
 
 <ExpandablePropertyDescription slot="description">
 
-<DebugPlaceholder>
-
-No description provided
-
-_OpenAPI example:_
-
-```
-description: My awesome description
-```
-
-</DebugPlaceholder>
+The cost of the fine-tuning job.
 
 </ExpandablePropertyDescription>
 
@@ -15043,17 +14693,7 @@ defaultValue: MyDefaultValue
 
 <ExpandablePropertyDescription slot="description">
 
-<DebugPlaceholder>
-
-No description provided
-
-_OpenAPI example:_
-
-```
-description: My awesome description
-```
-
-</DebugPlaceholder>
+The currency used for the fine-tuning job cost.
 
 </ExpandablePropertyDescription>
 
@@ -15104,17 +14744,7 @@ defaultValue: MyDefaultValue
 
 <ExpandablePropertyDescription slot="description">
 
-<DebugPlaceholder>
-
-No description provided
-
-_OpenAPI example:_
-
-```
-description: My awesome description
-```
-
-</DebugPlaceholder>
+The total number of tokens in the training dataset.
 
 </ExpandablePropertyDescription>
 
@@ -15291,17 +14921,7 @@ defaultValue: MyDefaultValue
 
 <ExpandablePropertyDescription slot="description">
 
-<DebugPlaceholder>
-
-No description provided
-
-_OpenAPI example:_
-
-```
-description: My awesome description
-```
-
-</DebugPlaceholder>
+The number of complete passes through the entire training dataset.
 
 </ExpandablePropertyDescription>
 
@@ -15420,17 +15040,7 @@ defaultValue: MyDefaultValue
 
 <ExpandablePropertyDescription slot="description">
 
-<DebugPlaceholder>
-
-No description provided
-
-_OpenAPI example:_
-
-```
-description: My awesome description
-```
-
-</DebugPlaceholder>
+The approximated time (in seconds) for the fine-tuning process to complete.
 
 </ExpandablePropertyDescription>
 
@@ -15539,17 +15149,7 @@ _Default Value:_ `"job.metadata"`
 
 <ExpandablePropertyDescription slot="description">
 
-<DebugPlaceholder>
-
-No description provided
-
-_OpenAPI example:_
-
-```
-description: My awesome description
-```
-
-</DebugPlaceholder>
+The total number of tokens used during the fine-tuning process.
 
 </ExpandablePropertyDescription>
 
@@ -15600,17 +15200,7 @@ defaultValue: MyDefaultValue
 
 <ExpandablePropertyDescription slot="description">
 
-<DebugPlaceholder>
-
-No description provided
-
-_OpenAPI example:_
-
-```
-description: My awesome description
-```
-
-</DebugPlaceholder>
+The number of tokens consumed by one training step.
 
 </ExpandablePropertyDescription>
 
@@ -15661,17 +15251,7 @@ defaultValue: MyDefaultValue
 
 <ExpandablePropertyDescription slot="description">
 
-<DebugPlaceholder>
-
-No description provided
-
-_OpenAPI example:_
-
-```
-description: My awesome description
-```
-
-</DebugPlaceholder>
+The number of training steps to perform. A training step refers to a single update of the model weights during the fine-tuning process. This update is typically calculated using a batch of samples from the training dataset.
 
 </ExpandablePropertyDescription>
 
@@ -17960,17 +17540,7 @@ defaultValue: MyDefaultValue
 
 <ExpandablePropertyDescription slot="description">
 
-<DebugPlaceholder>
-
-No description provided
-
-_OpenAPI example:_
-
-```
-description: My awesome description
-```
-
-</DebugPlaceholder>
+A display name to set for the run. If not set, will use the job ID as the name.
 
 </ExpandablePropertyDescription>
 
@@ -22340,17 +21910,7 @@ defaultValue: MyDefaultValue
 
 <ExpandablePropertyDescription slot="description">
 
-<DebugPlaceholder>
-
-No description provided
-
-_OpenAPI example:_
-
-```
-description: My awesome description
-```
-
-</DebugPlaceholder>
+A display name to set for the run. If not set, will use the job ID as the name.
 
 </ExpandablePropertyDescription>
 
@@ -26106,17 +25666,7 @@ defaultValue: MyDefaultValue
 
 <ExpandablePropertyDescription slot="description">
 
-<DebugPlaceholder>
-
-No description provided
-
-_OpenAPI example:_
-
-```
-description: My awesome description
-```
-
-</DebugPlaceholder>
+A display name to set for the run. If not set, will use the job ID as the name.
 
 </ExpandablePropertyDescription>
 
@@ -30486,17 +30036,7 @@ defaultValue: MyDefaultValue
 
 <ExpandablePropertyDescription slot="description">
 
-<DebugPlaceholder>
-
-No description provided
-
-_OpenAPI example:_
-
-```
-description: My awesome description
-```
-
-</DebugPlaceholder>
+A display name to set for the run. If not set, will use the job ID as the name.
 
 </ExpandablePropertyDescription>
 
@@ -34262,17 +33802,7 @@ defaultValue: MyDefaultValue
 
 <ExpandablePropertyDescription slot="description">
 
-<DebugPlaceholder>
-
-No description provided
-
-_OpenAPI example:_
-
-```
-description: My awesome description
-```
-
-</DebugPlaceholder>
+A display name to set for the run. If not set, will use the job ID as the name.
 
 </ExpandablePropertyDescription>
 
@@ -38642,17 +38172,7 @@ defaultValue: MyDefaultValue
 
 <ExpandablePropertyDescription slot="description">
 
-<DebugPlaceholder>
-
-No description provided
-
-_OpenAPI example:_
-
-```
-description: My awesome description
-```
-
-</DebugPlaceholder>
+A display name to set for the run. If not set, will use the job ID as the name.
 
 </ExpandablePropertyDescription>
 
