--- a/examples/docusaurus/mistral/docs/api/endpoint/ocr.mdx
+++ b/examples/docusaurus/mistral/docs/api/endpoint/ocr.mdx
@@ -986,17 +986,7 @@ defaultValue: MyDefaultValue
 
 <ExpandablePropertyDescription slot="description">
 
-<DebugPlaceholder>
-
-No description provided
-
-_OpenAPI example:_
-
-```
-description: My awesome description
-```
-
-</DebugPlaceholder>
+The filename of the document
 
 </ExpandablePropertyDescription>
 
@@ -2263,17 +2253,7 @@ defaultValue: MyDefaultValue
 
 <ExpandablePropertyDescription slot="description">
 
-<DebugPlaceholder>
-
-No description provided
-
-_OpenAPI example:_
-
-```
-description: My awesome description
-```
-
-</DebugPlaceholder>
+Max images to extract
 
 </ExpandablePropertyDescription>
 
@@ -2330,17 +2310,7 @@ defaultValue: MyDefaultValue
 
 <ExpandablePropertyDescription slot="description">
 
-<DebugPlaceholder>
-
-No description provided
-
-_OpenAPI example:_
-
-```
-description: My awesome description
-```
-
-</DebugPlaceholder>
+Minimum height and width of image to extract
 
 </ExpandablePropertyDescription>
 
@@ -2397,17 +2367,7 @@ defaultValue: MyDefaultValue
 
 <ExpandablePropertyDescription slot="description">
 
-<DebugPlaceholder>
-
-No description provided
-
-_OpenAPI example:_
-
-```
-description: My awesome description
-```
-
-</DebugPlaceholder>
+Include image URLs in response
 
 </ExpandablePropertyDescription>
 
@@ -2531,17 +2491,7 @@ defaultValue: MyDefaultValue
 
 <ExpandablePropertyDescription slot="description">
 
-<DebugPlaceholder>
-
-No description provided
-
-_OpenAPI example:_
-
-```
-description: My awesome description
-```
-
-</DebugPlaceholder>
+Specific pages user wants to process in various formats: single number, range, or list of both. Starts from 0
 
 </ExpandablePropertyDescription>
 
@@ -2690,17 +2640,7 @@ Successful Response
 
 <ExpandablePropertyDescription slot="description">
 
-<DebugPlaceholder>
-
-No description provided
-
-_OpenAPI example:_
-
-```
-description: My awesome description
-```
-
-</DebugPlaceholder>
+Formatted response in the request_format if provided in json str
 
 </ExpandablePropertyDescription>
 
@@ -2938,17 +2878,7 @@ defaultValue: MyDefaultValue
 
 <ExpandablePropertyDescription slot="description">
 
-<DebugPlaceholder>
-
-No description provided
-
-_OpenAPI example:_
-
-```
-description: My awesome description
-```
-
-</DebugPlaceholder>
+The dimensions of the PDF Page's screenshot image
 
 </ExpandablePropertyDescription>
 
@@ -3368,17 +3298,7 @@ defaultValue: MyDefaultValue
 
 <ExpandablePropertyDescription slot="description">
 
-<DebugPlaceholder>
-
-No description provided
-
-_OpenAPI example:_
-
-```
-description: My awesome description
-```
-
-</DebugPlaceholder>
+X coordinate of bottom-right corner of the extracted image
 
 </ExpandablePropertyDescription>
 
@@ -3436,17 +3356,7 @@ defaultValue: MyDefaultValue
 
 <ExpandablePropertyDescription slot="description">
 
-<DebugPlaceholder>
-
-No description provided
-
-_OpenAPI example:_
-
-```
-description: My awesome description
-```
-
-</DebugPlaceholder>
+Y coordinate of bottom-right corner of the extracted image
 
 </ExpandablePropertyDescription>
 
@@ -3562,17 +3472,7 @@ defaultValue: MyDefaultValue
 
 <ExpandablePropertyDescription slot="description">
 
-<DebugPlaceholder>
-
-No description provided
-
-_OpenAPI example:_
-
-```
-description: My awesome description
-```
-
-</DebugPlaceholder>
+Annotation of the extracted image in json str
 
 </ExpandablePropertyDescription>
 
@@ -3630,17 +3530,7 @@ defaultValue: MyDefaultValue
 
 <ExpandablePropertyDescription slot="description">
 
-<DebugPlaceholder>
-
-No description provided
-
-_OpenAPI example:_
-
-```
-description: My awesome description
-```
-
-</DebugPlaceholder>
+Base64 string of the extracted image
 
 </ExpandablePropertyDescription>
 
@@ -3698,17 +3588,7 @@ defaultValue: MyDefaultValue
 
 <ExpandablePropertyDescription slot="description">
 
-<DebugPlaceholder>
-
-No description provided
-
-_OpenAPI example:_
-
-```
-description: My awesome description
-```
-
-</DebugPlaceholder>
+X coordinate of top-left corner of the extracted image
 
 </ExpandablePropertyDescription>
 
@@ -3766,17 +3646,7 @@ defaultValue: MyDefaultValue
 
 <ExpandablePropertyDescription slot="description">
 
-<DebugPlaceholder>
-
-No description provided
-
-_OpenAPI example:_
-
-```
-description: My awesome description
-```
-
-</DebugPlaceholder>
+Y coordinate of top-left corner of the extracted image
 
 </ExpandablePropertyDescription>
 
@@ -4099,17 +3969,7 @@ defaultValue: MyDefaultValue
 
 <ExpandablePropertyDescription slot="description">
 
-<DebugPlaceholder>
-
-No description provided
-
-_OpenAPI example:_
-
-```
-description: My awesome description
-```
-
-</DebugPlaceholder>
+Document size in bytes
 
 </ExpandablePropertyDescription>
 
