--- a/examples/nextra/mistral/src/app/api/endpoint/classifiers/page.mdx
+++ b/examples/nextra/mistral/src/app/api/endpoint/classifiers/page.mdx
@@ -967,7 +967,7 @@ _Default Value:_ `"image_url"`
   parentId="inputs_UserMessage_content_DocumentURLChunk"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
-  hasExpandableContent={false}
+  hasExpandableContent={true}
   expandByDefault={false}
 >
 
@@ -976,6 +976,12 @@ _Default Value:_ `"image_url"`
 ##### document_name [#operation-chat_moderations_v1_chat_moderations_post_request_inputs_usermessage_content_documenturlchunk_document_name]
 
 </ExpandablePropertyTitle>
+
+<ExpandablePropertyDescription slot="description">
+
+The filename of the document
+
+</ExpandablePropertyDescription>
 
 </ExpandableProperty>
 
@@ -1384,7 +1390,7 @@ _Default Value:_ `"image_url"`
   parentId="inputs_AssistantMessage_content_DocumentURLChunk"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
-  hasExpandableContent={false}
+  hasExpandableContent={true}
   expandByDefault={false}
 >
 
@@ -1393,6 +1399,12 @@ _Default Value:_ `"image_url"`
 ##### document_name [#operation-chat_moderations_v1_chat_moderations_post_request_inputs_assistantmessage_content_documenturlchunk_document_name]
 
 </ExpandablePropertyTitle>
+
+<ExpandablePropertyDescription slot="description">
+
+The filename of the document
+
+</ExpandablePropertyDescription>
 
 </ExpandableProperty>
 
@@ -2027,7 +2039,7 @@ _Default Value:_ `"image_url"`
   parentId="inputs_ToolMessage_content_DocumentURLChunk"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
-  hasExpandableContent={false}
+  hasExpandableContent={true}
   expandByDefault={false}
 >
 
@@ -2036,6 +2048,12 @@ _Default Value:_ `"image_url"`
 ##### document_name [#operation-chat_moderations_v1_chat_moderations_post_request_inputs_toolmessage_content_documenturlchunk_document_name]
 
 </ExpandablePropertyTitle>
+
+<ExpandablePropertyDescription slot="description">
+
+The filename of the document
+
+</ExpandablePropertyDescription>
 
 </ExpandableProperty>
 
@@ -3361,7 +3379,7 @@ _Default Value:_ `"image_url"`
   parentId="inputs_InstructRequest_messages_UserMessage_content_DocumentURLChunk"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
-  hasExpandableContent={false}
+  hasExpandableContent={true}
   expandByDefault={false}
 >
 
@@ -3370,6 +3388,12 @@ _Default Value:_ `"image_url"`
 ##### document_name [#operation-chat_classifications_v1_chat_classifications_post_request_inputs_instructrequest_messages_usermessage_content_documenturlchunk_document_name]
 
 </ExpandablePropertyTitle>
+
+<ExpandablePropertyDescription slot="description">
+
+The filename of the document
+
+</ExpandablePropertyDescription>
 
 </ExpandableProperty>
 
@@ -3778,7 +3802,7 @@ _Default Value:_ `"image_url"`
   parentId="inputs_InstructRequest_messages_AssistantMessage_content_DocumentURLChunk"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
-  hasExpandableContent={false}
+  hasExpandableContent={true}
   expandByDefault={false}
 >
 
@@ -3787,6 +3811,12 @@ _Default Value:_ `"image_url"`
 ##### document_name [#operation-chat_classifications_v1_chat_classifications_post_request_inputs_instructrequest_messages_assistantmessage_content_documenturlchunk_document_name]
 
 </ExpandablePropertyTitle>
+
+<ExpandablePropertyDescription slot="description">
+
+The filename of the document
+
+</ExpandablePropertyDescription>
 
 </ExpandableProperty>
 
@@ -4421,7 +4451,7 @@ _Default Value:_ `"image_url"`
   parentId="inputs_InstructRequest_messages_ToolMessage_content_DocumentURLChunk"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
-  hasExpandableContent={false}
+  hasExpandableContent={true}
   expandByDefault={false}
 >
 
@@ -4430,6 +4460,12 @@ _Default Value:_ `"image_url"`
 ##### document_name [#operation-chat_classifications_v1_chat_classifications_post_request_inputs_instructrequest_messages_toolmessage_content_documenturlchunk_document_name]
 
 </ExpandablePropertyTitle>
+
+<ExpandablePropertyDescription slot="description">
+
+The filename of the document
+
+</ExpandablePropertyDescription>
 
 </ExpandableProperty>
 
