--- a/examples/nextra/mistral/src/app/api/endpoint/embeddings/page.mdx
+++ b/examples/nextra/mistral/src/app/api/endpoint/embeddings/page.mdx
@@ -225,7 +225,7 @@ mistral-embed
   headingId="operation-embeddings_v1_embeddings_post_request_output_dimension"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
-  hasExpandableContent={false}
+  hasExpandableContent={true}
   expandByDefault={true}
 >
 
@@ -234,6 +234,12 @@ mistral-embed
 ##### output_dimension [#operation-embeddings_v1_embeddings_post_request_output_dimension]
 
 </ExpandablePropertyTitle>
+
+<ExpandablePropertyDescription slot="description">
+
+The dimension of the output embeddings.
+
+</ExpandablePropertyDescription>
 
 </ExpandableProperty>
 
