--- a/examples/nextra/mistral/src/app/api/endpoint/fine-tuning/jobs/page.mdx
+++ b/examples/nextra/mistral/src/app/api/endpoint/fine-tuning/jobs/page.mdx
@@ -263,7 +263,7 @@ The UNIX timestamp (in seconds) for when the fine-tuning job was created.
   parentId="data_CompletionJobOut"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
-  hasExpandableContent={false}
+  hasExpandableContent={true}
   expandByDefault={false}
 >
 
@@ -272,6 +272,12 @@ The UNIX timestamp (in seconds) for when the fine-tuning job was created.
 ##### fine_tuned_model [#operation-jobs_api_routes_fine_tuning_get_fine_tuning_jobs_responses_200_application-json_data_completionjobout_fine_tuned_model]
 
 </ExpandablePropertyTitle>
+
+<ExpandablePropertyDescription slot="description">
+
+The name of the fine-tuned model that is being created. The value will be `null` if the fine-tuning job is still running.
+
+</ExpandablePropertyDescription>
 
 </ExpandableProperty>
 
@@ -500,6 +506,12 @@ The ID of the job.
 
 </ExpandablePropertyTitle>
 
+<ExpandablePropertyDescription slot="description">
+
+A list of integrations enabled for your fine-tuning job.
+
+</ExpandablePropertyDescription>
+
 <ExpandablePropertyBreakouts slot="breakouts">
 
 <ExpandableBreakout
@@ -526,7 +538,7 @@ The ID of the job.
   parentId="data_CompletionJobOut_integrations_WandbIntegrationOut"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
-  hasExpandableContent={false}
+  hasExpandableContent={true}
   expandByDefault={false}
 >
 
@@ -535,6 +547,12 @@ The ID of the job.
 ##### name [#operation-jobs_api_routes_fine_tuning_get_fine_tuning_jobs_responses_200_application-json_data_completionjobout_integrations_wandbintegrationout_name]
 
 </ExpandablePropertyTitle>
+
+<ExpandablePropertyDescription slot="description">
+
+A display name to set for the run. If not set, will use the job ID as the name.
+
+</ExpandablePropertyDescription>
 
 </ExpandableProperty>
 
@@ -1125,7 +1143,7 @@ The current status of the fine-tuning job.
   parentId="data_CompletionJobOut"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
-  hasExpandableContent={false}
+  hasExpandableContent={true}
   expandByDefault={false}
 >
 
@@ -1134,6 +1152,12 @@ The current status of the fine-tuning job.
 ##### suffix [#operation-jobs_api_routes_fine_tuning_get_fine_tuning_jobs_responses_200_application-json_data_completionjobout_suffix]
 
 </ExpandablePropertyTitle>
+
+<ExpandablePropertyDescription slot="description">
+
+Optional text/code that adds more context for the model. When given a `prompt` and a `suffix` the model will fill what is between them. When `suffix` is not provided, the model will simply execute completion starting with `prompt`.
+
+</ExpandablePropertyDescription>
 
 </ExpandableProperty>
 
@@ -1144,7 +1168,7 @@ The current status of the fine-tuning job.
   parentId="data_CompletionJobOut"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
-  hasExpandableContent={false}
+  hasExpandableContent={true}
   expandByDefault={false}
 >
 
@@ -1153,6 +1177,12 @@ The current status of the fine-tuning job.
 ##### trained_tokens [#operation-jobs_api_routes_fine_tuning_get_fine_tuning_jobs_responses_200_application-json_data_completionjobout_trained_tokens]
 
 </ExpandablePropertyTitle>
+
+<ExpandablePropertyDescription slot="description">
+
+Total number of tokens trained.
+
+</ExpandablePropertyDescription>
 
 </ExpandableProperty>
 
@@ -1188,7 +1218,7 @@ A list containing the IDs of uploaded files that contain training data.
   parentId="data_CompletionJobOut"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"array","linkedLabel":"string","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
-  hasExpandableContent={false}
+  hasExpandableContent={true}
   expandByDefault={false}
 >
 
@@ -1197,6 +1227,12 @@ A list containing the IDs of uploaded files that contain training data.
 ##### validation_files [#operation-jobs_api_routes_fine_tuning_get_fine_tuning_jobs_responses_200_application-json_data_completionjobout_validation_files]
 
 </ExpandablePropertyTitle>
+
+<ExpandablePropertyDescription slot="description">
+
+A list containing the IDs of uploaded files that contain validation data.
+
+</ExpandablePropertyDescription>
 
 </ExpandableProperty>
 
@@ -1272,7 +1308,7 @@ The UNIX timestamp (in seconds) for when the fine-tuning job was created.
   parentId="data_ClassifierJobOut"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
-  hasExpandableContent={false}
+  hasExpandableContent={true}
   expandByDefault={false}
 >
 
@@ -1281,6 +1317,12 @@ The UNIX timestamp (in seconds) for when the fine-tuning job was created.
 ##### fine_tuned_model [#operation-jobs_api_routes_fine_tuning_get_fine_tuning_jobs_responses_200_application-json_data_classifierjobout_fine_tuned_model]
 
 </ExpandablePropertyTitle>
+
+<ExpandablePropertyDescription slot="description">
+
+The name of the fine-tuned model that is being created. The value will be `null` if the fine-tuning job is still running.
+
+</ExpandablePropertyDescription>
 
 </ExpandableProperty>
 
@@ -1490,6 +1532,12 @@ The ID of the job.
 
 </ExpandablePropertyTitle>
 
+<ExpandablePropertyDescription slot="description">
+
+A list of integrations enabled for your fine-tuning job.
+
+</ExpandablePropertyDescription>
+
 <ExpandablePropertyBreakouts slot="breakouts">
 
 <ExpandableBreakout
@@ -1516,7 +1564,7 @@ The ID of the job.
   parentId="data_ClassifierJobOut_integrations_WandbIntegrationOut"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
-  hasExpandableContent={false}
+  hasExpandableContent={true}
   expandByDefault={false}
 >
 
@@ -1525,6 +1573,12 @@ The ID of the job.
 ##### name [#operation-jobs_api_routes_fine_tuning_get_fine_tuning_jobs_responses_200_application-json_data_classifierjobout_integrations_wandbintegrationout_name]
 
 </ExpandablePropertyTitle>
+
+<ExpandablePropertyDescription slot="description">
+
+A display name to set for the run. If not set, will use the job ID as the name.
+
+</ExpandablePropertyDescription>
 
 </ExpandableProperty>
 
@@ -1945,7 +1999,7 @@ The current status of the fine-tuning job.
   parentId="data_ClassifierJobOut"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
-  hasExpandableContent={false}
+  hasExpandableContent={true}
   expandByDefault={false}
 >
 
@@ -1954,6 +2008,12 @@ The current status of the fine-tuning job.
 ##### suffix [#operation-jobs_api_routes_fine_tuning_get_fine_tuning_jobs_responses_200_application-json_data_classifierjobout_suffix]
 
 </ExpandablePropertyTitle>
+
+<ExpandablePropertyDescription slot="description">
+
+Optional text/code that adds more context for the model. When given a `prompt` and a `suffix` the model will fill what is between them. When `suffix` is not provided, the model will simply execute completion starting with `prompt`.
+
+</ExpandablePropertyDescription>
 
 </ExpandableProperty>
 
@@ -1964,7 +2024,7 @@ The current status of the fine-tuning job.
   parentId="data_ClassifierJobOut"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
-  hasExpandableContent={false}
+  hasExpandableContent={true}
   expandByDefault={false}
 >
 
@@ -1973,6 +2033,12 @@ The current status of the fine-tuning job.
 ##### trained_tokens [#operation-jobs_api_routes_fine_tuning_get_fine_tuning_jobs_responses_200_application-json_data_classifierjobout_trained_tokens]
 
 </ExpandablePropertyTitle>
+
+<ExpandablePropertyDescription slot="description">
+
+Total number of tokens trained.
+
+</ExpandablePropertyDescription>
 
 </ExpandableProperty>
 
@@ -2008,7 +2074,7 @@ A list containing the IDs of uploaded files that contain training data.
   parentId="data_ClassifierJobOut"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"array","linkedLabel":"string","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
-  hasExpandableContent={false}
+  hasExpandableContent={true}
   expandByDefault={false}
 >
 
@@ -2017,6 +2083,12 @@ A list containing the IDs of uploaded files that contain training data.
 ##### validation_files [#operation-jobs_api_routes_fine_tuning_get_fine_tuning_jobs_responses_200_application-json_data_classifierjobout_validation_files]
 
 </ExpandablePropertyTitle>
+
+<ExpandablePropertyDescription slot="description">
+
+A list containing the IDs of uploaded files that contain validation data.
+
+</ExpandablePropertyDescription>
 
 </ExpandableProperty>
 
@@ -2482,7 +2554,7 @@ _Default Value:_ `0.0001`
   parentId="hyperparameters_CompletionTrainingParametersIn"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
-  hasExpandableContent={false}
+  hasExpandableContent={true}
   expandByDefault={false}
 >
 
@@ -2491,6 +2563,12 @@ _Default Value:_ `0.0001`
 ##### training_steps [#operation-jobs_api_routes_fine_tuning_create_fine_tuning_job_request_hyperparameters_completiontrainingparametersin_training_steps]
 
 </ExpandablePropertyTitle>
+
+<ExpandablePropertyDescription slot="description">
+
+The number of training steps to perform. A training step refers to a single update of the model weights during the fine-tuning process. This update is typically calculated using a batch of samples from the training dataset.
+
+</ExpandablePropertyDescription>
 
 </ExpandableProperty>
 
@@ -2501,7 +2579,7 @@ _Default Value:_ `0.0001`
   parentId="hyperparameters_CompletionTrainingParametersIn"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"number","linkedLabel":"number","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
-  hasExpandableContent={false}
+  hasExpandableContent={true}
   expandByDefault={false}
 >
 
@@ -2510,6 +2588,12 @@ _Default Value:_ `0.0001`
 ##### warmup_fraction [#operation-jobs_api_routes_fine_tuning_create_fine_tuning_job_request_hyperparameters_completiontrainingparametersin_warmup_fraction]
 
 </ExpandablePropertyTitle>
+
+<ExpandablePropertyDescription slot="description">
+
+(Advanced Usage) A parameter that specifies the percentage of the total training steps at which the learning rate warm-up phase ends. During this phase, the learning rate gradually increases from a small value to the initial learning rate, helping to stabilize the training process and improve convergence. Similar to `pct_start` in [mistral-finetune](https://github.com/mistralai/mistral-finetune)
+
+</ExpandablePropertyDescription>
 
 </ExpandableProperty>
 
@@ -2520,7 +2604,7 @@ _Default Value:_ `0.0001`
   parentId="hyperparameters_CompletionTrainingParametersIn"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"number","linkedLabel":"number","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
-  hasExpandableContent={false}
+  hasExpandableContent={true}
   expandByDefault={false}
 >
 
@@ -2529,6 +2613,12 @@ _Default Value:_ `0.0001`
 ##### weight_decay [#operation-jobs_api_routes_fine_tuning_create_fine_tuning_job_request_hyperparameters_completiontrainingparametersin_weight_decay]
 
 </ExpandablePropertyTitle>
+
+<ExpandablePropertyDescription slot="description">
+
+(Advanced Usage) Weight decay adds a term to the loss function that is proportional to the sum of the squared weights. This term reduces the magnitude of the weights and prevents them from growing too large.
+
+</ExpandablePropertyDescription>
 
 </ExpandableProperty>
 
@@ -2635,7 +2725,7 @@ _Default Value:_ `0.0001`
   parentId="hyperparameters_ClassifierTrainingParametersIn"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
-  hasExpandableContent={false}
+  hasExpandableContent={true}
   expandByDefault={false}
 >
 
@@ -2644,6 +2734,12 @@ _Default Value:_ `0.0001`
 ##### training_steps [#operation-jobs_api_routes_fine_tuning_create_fine_tuning_job_request_hyperparameters_classifiertrainingparametersin_training_steps]
 
 </ExpandablePropertyTitle>
+
+<ExpandablePropertyDescription slot="description">
+
+The number of training steps to perform. A training step refers to a single update of the model weights during the fine-tuning process. This update is typically calculated using a batch of samples from the training dataset.
+
+</ExpandablePropertyDescription>
 
 </ExpandableProperty>
 
@@ -2654,7 +2750,7 @@ _Default Value:_ `0.0001`
   parentId="hyperparameters_ClassifierTrainingParametersIn"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"number","linkedLabel":"number","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
-  hasExpandableContent={false}
+  hasExpandableContent={true}
   expandByDefault={false}
 >
 
@@ -2663,6 +2759,12 @@ _Default Value:_ `0.0001`
 ##### warmup_fraction [#operation-jobs_api_routes_fine_tuning_create_fine_tuning_job_request_hyperparameters_classifiertrainingparametersin_warmup_fraction]
 
 </ExpandablePropertyTitle>
+
+<ExpandablePropertyDescription slot="description">
+
+(Advanced Usage) A parameter that specifies the percentage of the total training steps at which the learning rate warm-up phase ends. During this phase, the learning rate gradually increases from a small value to the initial learning rate, helping to stabilize the training process and improve convergence. Similar to `pct_start` in [mistral-finetune](https://github.com/mistralai/mistral-finetune)
+
+</ExpandablePropertyDescription>
 
 </ExpandableProperty>
 
@@ -2673,7 +2775,7 @@ _Default Value:_ `0.0001`
   parentId="hyperparameters_ClassifierTrainingParametersIn"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"number","linkedLabel":"number","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
-  hasExpandableContent={false}
+  hasExpandableContent={true}
   expandByDefault={false}
 >
 
@@ -2682,6 +2784,12 @@ _Default Value:_ `0.0001`
 ##### weight_decay [#operation-jobs_api_routes_fine_tuning_create_fine_tuning_job_request_hyperparameters_classifiertrainingparametersin_weight_decay]
 
 </ExpandablePropertyTitle>
+
+<ExpandablePropertyDescription slot="description">
+
+(Advanced Usage) Weight decay adds a term to the loss function that is proportional to the sum of the squared weights. This term reduces the magnitude of the weights and prevents them from growing too large.
+
+</ExpandablePropertyDescription>
 
 </ExpandableProperty>
 
@@ -2708,6 +2816,12 @@ _Default Value:_ `0.0001`
 ##### integrations [#operation-jobs_api_routes_fine_tuning_create_fine_tuning_job_request_integrations]
 
 </ExpandablePropertyTitle>
+
+<ExpandablePropertyDescription slot="description">
+
+A list of integrations to enable for your fine-tuning job.
+
+</ExpandablePropertyDescription>
 
 <ExpandablePropertyBreakouts slot="breakouts">
 
@@ -2760,7 +2874,7 @@ The WandB API key to use for authentication.
   parentId="integrations_WandbIntegration"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
-  hasExpandableContent={false}
+  hasExpandableContent={true}
   expandByDefault={false}
 >
 
@@ -2769,6 +2883,12 @@ The WandB API key to use for authentication.
 ##### name [#operation-jobs_api_routes_fine_tuning_create_fine_tuning_job_request_integrations_wandbintegration_name]
 
 </ExpandablePropertyTitle>
+
+<ExpandablePropertyDescription slot="description">
+
+A display name to set for the run. If not set, will use the job ID as the name.
+
+</ExpandablePropertyDescription>
 
 </ExpandableProperty>
 
@@ -3090,7 +3210,7 @@ _Default Value:_ `1`
   headingId="operation-jobs_api_routes_fine_tuning_create_fine_tuning_job_request_suffix"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
-  hasExpandableContent={false}
+  hasExpandableContent={true}
   expandByDefault={true}
 >
 
@@ -3099,6 +3219,12 @@ _Default Value:_ `1`
 ##### suffix [#operation-jobs_api_routes_fine_tuning_create_fine_tuning_job_request_suffix]
 
 </ExpandablePropertyTitle>
+
+<ExpandablePropertyDescription slot="description">
+
+A string that will be added to your fine-tuning model name. For example, a suffix of "my-great-model" would produce a model name like `ft:open-mistral-7b:my-great-model:xxx...`
+
+</ExpandablePropertyDescription>
 
 </ExpandableProperty>
 
@@ -3195,7 +3321,7 @@ _Default Value:_ `1`
   headingId="operation-jobs_api_routes_fine_tuning_create_fine_tuning_job_request_validation_files"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"array","linkedLabel":"string","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
-  hasExpandableContent={false}
+  hasExpandableContent={true}
   expandByDefault={true}
 >
 
@@ -3204,6 +3330,12 @@ _Default Value:_ `1`
 ##### validation_files [#operation-jobs_api_routes_fine_tuning_create_fine_tuning_job_request_validation_files]
 
 </ExpandablePropertyTitle>
+
+<ExpandablePropertyDescription slot="description">
+
+A list containing the IDs of uploaded files that contain validation data. If you provide these files, the data is used to generate validation metrics periodically during fine-tuning. These metrics can be viewed in `checkpoints` when getting the status of a running fine-tuning job. The same data should not be present in both train and validation files.
+
+</ExpandablePropertyDescription>
 
 </ExpandableProperty>
 
@@ -3322,7 +3454,7 @@ The UNIX timestamp (in seconds) for when the fine-tuning job was created.
   parentId="CompletionJobOut"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
-  hasExpandableContent={false}
+  hasExpandableContent={true}
   expandByDefault={false}
 >
 
@@ -3331,6 +3463,12 @@ The UNIX timestamp (in seconds) for when the fine-tuning job was created.
 ##### fine_tuned_model [#operation-jobs_api_routes_fine_tuning_create_fine_tuning_job_responses_200_application-json_completionjobout_fine_tuned_model]
 
 </ExpandablePropertyTitle>
+
+<ExpandablePropertyDescription slot="description">
+
+The name of the fine-tuned model that is being created. The value will be `null` if the fine-tuning job is still running.
+
+</ExpandablePropertyDescription>
 
 </ExpandableProperty>
 
@@ -3559,6 +3697,12 @@ The ID of the job.
 
 </ExpandablePropertyTitle>
 
+<ExpandablePropertyDescription slot="description">
+
+A list of integrations enabled for your fine-tuning job.
+
+</ExpandablePropertyDescription>
+
 <ExpandablePropertyBreakouts slot="breakouts">
 
 <ExpandableBreakout
@@ -3585,7 +3729,7 @@ The ID of the job.
   parentId="CompletionJobOut_integrations_WandbIntegrationOut"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
-  hasExpandableContent={false}
+  hasExpandableContent={true}
   expandByDefault={false}
 >
 
@@ -3594,6 +3738,12 @@ The ID of the job.
 ##### name [#operation-jobs_api_routes_fine_tuning_create_fine_tuning_job_responses_200_application-json_completionjobout_integrations_wandbintegrationout_name]
 
 </ExpandablePropertyTitle>
+
+<ExpandablePropertyDescription slot="description">
+
+A display name to set for the run. If not set, will use the job ID as the name.
+
+</ExpandablePropertyDescription>
 
 </ExpandableProperty>
 
@@ -4184,7 +4334,7 @@ The current status of the fine-tuning job.
   parentId="CompletionJobOut"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
-  hasExpandableContent={false}
+  hasExpandableContent={true}
   expandByDefault={false}
 >
 
@@ -4193,6 +4343,12 @@ The current status of the fine-tuning job.
 ##### suffix [#operation-jobs_api_routes_fine_tuning_create_fine_tuning_job_responses_200_application-json_completionjobout_suffix]
 
 </ExpandablePropertyTitle>
+
+<ExpandablePropertyDescription slot="description">
+
+Optional text/code that adds more context for the model. When given a `prompt` and a `suffix` the model will fill what is between them. When `suffix` is not provided, the model will simply execute completion starting with `prompt`.
+
+</ExpandablePropertyDescription>
 
 </ExpandableProperty>
 
@@ -4203,7 +4359,7 @@ The current status of the fine-tuning job.
   parentId="CompletionJobOut"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
-  hasExpandableContent={false}
+  hasExpandableContent={true}
   expandByDefault={false}
 >
 
@@ -4212,6 +4368,12 @@ The current status of the fine-tuning job.
 ##### trained_tokens [#operation-jobs_api_routes_fine_tuning_create_fine_tuning_job_responses_200_application-json_completionjobout_trained_tokens]
 
 </ExpandablePropertyTitle>
+
+<ExpandablePropertyDescription slot="description">
+
+Total number of tokens trained.
+
+</ExpandablePropertyDescription>
 
 </ExpandableProperty>
 
@@ -4247,7 +4409,7 @@ A list containing the IDs of uploaded files that contain training data.
   parentId="CompletionJobOut"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"array","linkedLabel":"string","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
-  hasExpandableContent={false}
+  hasExpandableContent={true}
   expandByDefault={false}
 >
 
@@ -4256,6 +4418,12 @@ A list containing the IDs of uploaded files that contain training data.
 ##### validation_files [#operation-jobs_api_routes_fine_tuning_create_fine_tuning_job_responses_200_application-json_completionjobout_validation_files]
 
 </ExpandablePropertyTitle>
+
+<ExpandablePropertyDescription slot="description">
+
+A list containing the IDs of uploaded files that contain validation data.
+
+</ExpandablePropertyDescription>
 
 </ExpandableProperty>
 
@@ -4330,7 +4498,7 @@ The UNIX timestamp (in seconds) for when the fine-tuning job was created.
   parentId="ClassifierJobOut"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
-  hasExpandableContent={false}
+  hasExpandableContent={true}
   expandByDefault={false}
 >
 
@@ -4339,6 +4507,12 @@ The UNIX timestamp (in seconds) for when the fine-tuning job was created.
 ##### fine_tuned_model [#operation-jobs_api_routes_fine_tuning_create_fine_tuning_job_responses_200_application-json_classifierjobout_fine_tuned_model]
 
 </ExpandablePropertyTitle>
+
+<ExpandablePropertyDescription slot="description">
+
+The name of the fine-tuned model that is being created. The value will be `null` if the fine-tuning job is still running.
+
+</ExpandablePropertyDescription>
 
 </ExpandableProperty>
 
@@ -4548,6 +4722,12 @@ The ID of the job.
 
 </ExpandablePropertyTitle>
 
+<ExpandablePropertyDescription slot="description">
+
+A list of integrations enabled for your fine-tuning job.
+
+</ExpandablePropertyDescription>
+
 <ExpandablePropertyBreakouts slot="breakouts">
 
 <ExpandableBreakout
@@ -4574,7 +4754,7 @@ The ID of the job.
   parentId="ClassifierJobOut_integrations_WandbIntegrationOut"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
-  hasExpandableContent={false}
+  hasExpandableContent={true}
   expandByDefault={false}
 >
 
@@ -4583,6 +4763,12 @@ The ID of the job.
 ##### name [#operation-jobs_api_routes_fine_tuning_create_fine_tuning_job_responses_200_application-json_classifierjobout_integrations_wandbintegrationout_name]
 
 </ExpandablePropertyTitle>
+
+<ExpandablePropertyDescription slot="description">
+
+A display name to set for the run. If not set, will use the job ID as the name.
+
+</ExpandablePropertyDescription>
 
 </ExpandableProperty>
 
@@ -5003,7 +5189,7 @@ The current status of the fine-tuning job.
   parentId="ClassifierJobOut"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
-  hasExpandableContent={false}
+  hasExpandableContent={true}
   expandByDefault={false}
 >
 
@@ -5012,6 +5198,12 @@ The current status of the fine-tuning job.
 ##### suffix [#operation-jobs_api_routes_fine_tuning_create_fine_tuning_job_responses_200_application-json_classifierjobout_suffix]
 
 </ExpandablePropertyTitle>
+
+<ExpandablePropertyDescription slot="description">
+
+Optional text/code that adds more context for the model. When given a `prompt` and a `suffix` the model will fill what is between them. When `suffix` is not provided, the model will simply execute completion starting with `prompt`.
+
+</ExpandablePropertyDescription>
 
 </ExpandableProperty>
 
@@ -5022,7 +5214,7 @@ The current status of the fine-tuning job.
   parentId="ClassifierJobOut"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
-  hasExpandableContent={false}
+  hasExpandableContent={true}
   expandByDefault={false}
 >
 
@@ -5031,6 +5223,12 @@ The current status of the fine-tuning job.
 ##### trained_tokens [#operation-jobs_api_routes_fine_tuning_create_fine_tuning_job_responses_200_application-json_classifierjobout_trained_tokens]
 
 </ExpandablePropertyTitle>
+
+<ExpandablePropertyDescription slot="description">
+
+Total number of tokens trained.
+
+</ExpandablePropertyDescription>
 
 </ExpandableProperty>
 
@@ -5066,7 +5264,7 @@ A list containing the IDs of uploaded files that contain training data.
   parentId="ClassifierJobOut"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"array","linkedLabel":"string","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
-  hasExpandableContent={false}
+  hasExpandableContent={true}
   expandByDefault={false}
 >
 
@@ -5075,6 +5273,12 @@ A list containing the IDs of uploaded files that contain training data.
 ##### validation_files [#operation-jobs_api_routes_fine_tuning_create_fine_tuning_job_responses_200_application-json_classifierjobout_validation_files]
 
 </ExpandablePropertyTitle>
+
+<ExpandablePropertyDescription slot="description">
+
+A list containing the IDs of uploaded files that contain validation data.
+
+</ExpandablePropertyDescription>
 
 </ExpandableProperty>
 
@@ -5115,6 +5319,12 @@ A list containing the IDs of uploaded files that contain training data.
 
 </ExpandablePropertyTitle>
 
+<ExpandablePropertyDescription slot="description">
+
+The cost of the fine-tuning job.
+
+</ExpandablePropertyDescription>
+
 <ExpandablePropertyExamples slot="examples">
 
 _Example:_
@@ -5144,6 +5354,12 @@ _Example:_
 
 </ExpandablePropertyTitle>
 
+<ExpandablePropertyDescription slot="description">
+
+The currency used for the fine-tuning job cost.
+
+</ExpandablePropertyDescription>
+
 <ExpandablePropertyExamples slot="examples">
 
 _Example:_
@@ -5172,6 +5388,12 @@ EUR
 ##### data_tokens [#operation-jobs_api_routes_fine_tuning_create_fine_tuning_job_responses_200_application-json_legacyjobmetadataout_data_tokens]
 
 </ExpandablePropertyTitle>
+
+<ExpandablePropertyDescription slot="description">
+
+The total number of tokens in the training dataset.
+
+</ExpandablePropertyDescription>
 
 <ExpandablePropertyExamples slot="examples">
 
@@ -5246,6 +5468,12 @@ _Default Value:_ `true`
 
 </ExpandablePropertyTitle>
 
+<ExpandablePropertyDescription slot="description">
+
+The number of complete passes through the entire training dataset.
+
+</ExpandablePropertyDescription>
+
 <ExpandablePropertyExamples slot="examples">
 
 _Example:_
@@ -5293,6 +5521,12 @@ _Example:_
 ##### expected_duration_seconds [#operation-jobs_api_routes_fine_tuning_create_fine_tuning_job_responses_200_application-json_legacyjobmetadataout_expected_duration_seconds]
 
 </ExpandablePropertyTitle>
+
+<ExpandablePropertyDescription slot="description">
+
+The approximated time (in seconds) for the fine-tuning process to complete.
+
+</ExpandablePropertyDescription>
 
 <ExpandablePropertyExamples slot="examples">
 
@@ -5348,6 +5582,12 @@ _Default Value:_ `"job.metadata"`
 
 </ExpandablePropertyTitle>
 
+<ExpandablePropertyDescription slot="description">
+
+The total number of tokens used during the fine-tuning process.
+
+</ExpandablePropertyDescription>
+
 <ExpandablePropertyExamples slot="examples">
 
 _Example:_
@@ -5377,6 +5617,12 @@ _Example:_
 
 </ExpandablePropertyTitle>
 
+<ExpandablePropertyDescription slot="description">
+
+The number of tokens consumed by one training step.
+
+</ExpandablePropertyDescription>
+
 <ExpandablePropertyExamples slot="examples">
 
 _Example:_
@@ -5405,6 +5651,12 @@ _Example:_
 ##### training_steps [#operation-jobs_api_routes_fine_tuning_create_fine_tuning_job_responses_200_application-json_legacyjobmetadataout_training_steps]
 
 </ExpandablePropertyTitle>
+
+<ExpandablePropertyDescription slot="description">
+
+The number of training steps to perform. A training step refers to a single update of the model weights during the fine-tuning process. This update is typically calculated using a batch of samples from the training dataset.
+
+</ExpandablePropertyDescription>
 
 <ExpandablePropertyExamples slot="examples">
 
@@ -6274,7 +6526,7 @@ _Default Value:_ `0.0001`
   parentId="CompletionDetailedJobOut_integrations_WandbIntegrationOut"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
-  hasExpandableContent={false}
+  hasExpandableContent={true}
   expandByDefault={false}
 >
 
@@ -6283,6 +6535,12 @@ _Default Value:_ `0.0001`
 ##### name [#operation-jobs_api_routes_fine_tuning_get_fine_tuning_job_responses_200_application-json_completiondetailedjobout_integrations_wandbintegrationout_name]
 
 </ExpandablePropertyTitle>
+
+<ExpandablePropertyDescription slot="description">
+
+A display name to set for the run. If not set, will use the job ID as the name.
+
+</ExpandablePropertyDescription>
 
 </ExpandableProperty>
 
@@ -7677,7 +7935,7 @@ _Default Value:_ `0.0001`
   parentId="ClassifierDetailedJobOut_integrations_WandbIntegrationOut"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
-  hasExpandableContent={false}
+  hasExpandableContent={true}
   expandByDefault={false}
 >
 
@@ -7686,6 +7944,12 @@ _Default Value:_ `0.0001`
 ##### name [#operation-jobs_api_routes_fine_tuning_get_fine_tuning_job_responses_200_application-json_classifierdetailedjobout_integrations_wandbintegrationout_name]
 
 </ExpandablePropertyTitle>
+
+<ExpandablePropertyDescription slot="description">
+
+A display name to set for the run. If not set, will use the job ID as the name.
+
+</ExpandablePropertyDescription>
 
 </ExpandableProperty>
 
@@ -9007,7 +9271,7 @@ _Default Value:_ `0.0001`
   parentId="CompletionDetailedJobOut_integrations_WandbIntegrationOut"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
-  hasExpandableContent={false}
+  hasExpandableContent={true}
   expandByDefault={false}
 >
 
@@ -9016,6 +9280,12 @@ _Default Value:_ `0.0001`
 ##### name [#operation-jobs_api_routes_fine_tuning_cancel_fine_tuning_job_responses_200_application-json_completiondetailedjobout_integrations_wandbintegrationout_name]
 
 </ExpandablePropertyTitle>
+
+<ExpandablePropertyDescription slot="description">
+
+A display name to set for the run. If not set, will use the job ID as the name.
+
+</ExpandablePropertyDescription>
 
 </ExpandableProperty>
 
@@ -10410,7 +10680,7 @@ _Default Value:_ `0.0001`
   parentId="ClassifierDetailedJobOut_integrations_WandbIntegrationOut"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
-  hasExpandableContent={false}
+  hasExpandableContent={true}
   expandByDefault={false}
 >
 
@@ -10419,6 +10689,12 @@ _Default Value:_ `0.0001`
 ##### name [#operation-jobs_api_routes_fine_tuning_cancel_fine_tuning_job_responses_200_application-json_classifierdetailedjobout_integrations_wandbintegrationout_name]
 
 </ExpandablePropertyTitle>
+
+<ExpandablePropertyDescription slot="description">
+
+A display name to set for the run. If not set, will use the job ID as the name.
+
+</ExpandablePropertyDescription>
 
 </ExpandableProperty>
 
@@ -11734,7 +12010,7 @@ _Default Value:_ `0.0001`
   parentId="CompletionDetailedJobOut_integrations_WandbIntegrationOut"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
-  hasExpandableContent={false}
+  hasExpandableContent={true}
   expandByDefault={false}
 >
 
@@ -11743,6 +12019,12 @@ _Default Value:_ `0.0001`
 ##### name [#operation-jobs_api_routes_fine_tuning_start_fine_tuning_job_responses_200_application-json_completiondetailedjobout_integrations_wandbintegrationout_name]
 
 </ExpandablePropertyTitle>
+
+<ExpandablePropertyDescription slot="description">
+
+A display name to set for the run. If not set, will use the job ID as the name.
+
+</ExpandablePropertyDescription>
 
 </ExpandableProperty>
 
@@ -13137,7 +13419,7 @@ _Default Value:_ `0.0001`
   parentId="ClassifierDetailedJobOut_integrations_WandbIntegrationOut"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
-  hasExpandableContent={false}
+  hasExpandableContent={true}
   expandByDefault={false}
 >
 
@@ -13146,6 +13428,12 @@ _Default Value:_ `0.0001`
 ##### name [#operation-jobs_api_routes_fine_tuning_start_fine_tuning_job_responses_200_application-json_classifierdetailedjobout_integrations_wandbintegrationout_name]
 
 </ExpandablePropertyTitle>
+
+<ExpandablePropertyDescription slot="description">
+
+A display name to set for the run. If not set, will use the job ID as the name.
+
+</ExpandablePropertyDescription>
 
 </ExpandableProperty>
 
