--- a/examples/nextra/mistral/src/app/api/endpoint/ocr/page.mdx
+++ b/examples/nextra/mistral/src/app/api/endpoint/ocr/page.mdx
@@ -392,7 +392,7 @@ Document to run OCR on
   parentId="document_DocumentURLChunk"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
-  hasExpandableContent={false}
+  hasExpandableContent={true}
   expandByDefault={false}
 >
 
@@ -401,6 +401,12 @@ Document to run OCR on
 ##### document_name [#operation-ocr_v1_ocr_post_request_document_documenturlchunk_document_name]
 
 </ExpandablePropertyTitle>
+
+<ExpandablePropertyDescription slot="description">
+
+The filename of the document
+
+</ExpandablePropertyDescription>
 
 </ExpandableProperty>
 
@@ -802,7 +808,7 @@ An object specifying the format that the model must output. Setting to `\{ "type
   headingId="operation-ocr_v1_ocr_post_request_image_limit"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
-  hasExpandableContent={false}
+  hasExpandableContent={true}
   expandByDefault={true}
 >
 
@@ -812,6 +818,12 @@ An object specifying the format that the model must output. Setting to `\{ "type
 
 </ExpandablePropertyTitle>
 
+<ExpandablePropertyDescription slot="description">
+
+Max images to extract
+
+</ExpandablePropertyDescription>
+
 </ExpandableProperty>
 
 <ExpandableProperty
@@ -820,7 +832,7 @@ An object specifying the format that the model must output. Setting to `\{ "type
   headingId="operation-ocr_v1_ocr_post_request_image_min_size"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
-  hasExpandableContent={false}
+  hasExpandableContent={true}
   expandByDefault={true}
 >
 
@@ -830,6 +842,12 @@ An object specifying the format that the model must output. Setting to `\{ "type
 
 </ExpandablePropertyTitle>
 
+<ExpandablePropertyDescription slot="description">
+
+Minimum height and width of image to extract
+
+</ExpandablePropertyDescription>
+
 </ExpandableProperty>
 
 <ExpandableProperty
@@ -838,7 +856,7 @@ An object specifying the format that the model must output. Setting to `\{ "type
   headingId="operation-ocr_v1_ocr_post_request_include_image_base64"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"boolean","linkedLabel":"boolean","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
-  hasExpandableContent={false}
+  hasExpandableContent={true}
   expandByDefault={true}
 >
 
@@ -847,6 +865,12 @@ An object specifying the format that the model must output. Setting to `\{ "type
 ##### include_image_base64 [#operation-ocr_v1_ocr_post_request_include_image_base64]
 
 </ExpandablePropertyTitle>
+
+<ExpandablePropertyDescription slot="description">
+
+Include image URLs in response
+
+</ExpandablePropertyDescription>
 
 </ExpandableProperty>
 
@@ -874,7 +898,7 @@ An object specifying the format that the model must output. Setting to `\{ "type
   headingId="operation-ocr_v1_ocr_post_request_pages"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"array","linkedLabel":"integer","children":[{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
-  hasExpandableContent={false}
+  hasExpandableContent={true}
   expandByDefault={true}
 >
 
@@ -883,6 +907,12 @@ An object specifying the format that the model must output. Setting to `\{ "type
 ##### pages [#operation-ocr_v1_ocr_post_request_pages]
 
 </ExpandablePropertyTitle>
+
+<ExpandablePropertyDescription slot="description">
+
+Specific pages user wants to process in various formats: single number, range, or list of both. Starts from 0
+
+</ExpandablePropertyDescription>
 
 </ExpandableProperty>
 
@@ -926,7 +956,7 @@ Successful Response
   headingId="operation-ocr_v1_ocr_post_responses_200_application-json_document_annotation"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
-  hasExpandableContent={false}
+  hasExpandableContent={true}
   expandByDefault={true}
 >
 
@@ -935,6 +965,12 @@ Successful Response
 ##### document_annotation [#operation-ocr_v1_ocr_post_responses_200_application-json_document_annotation]
 
 </ExpandablePropertyTitle>
+
+<ExpandablePropertyDescription slot="description">
+
+Formatted response in the request_format if provided in json str
+
+</ExpandablePropertyDescription>
 
 </ExpandableProperty>
 
@@ -1019,6 +1055,12 @@ List of OCR info for pages.
 ##### dimensions [#operation-ocr_v1_ocr_post_responses_200_application-json_pages_ocrpageobject_dimensions]
 
 </ExpandablePropertyTitle>
+
+<ExpandablePropertyDescription slot="description">
+
+The dimensions of the PDF Page's screenshot image
+
+</ExpandablePropertyDescription>
 
 <ExpandablePropertyBreakouts slot="breakouts">
 
@@ -1177,7 +1219,7 @@ List of all extracted images in the page
   parentId="pages_OCRPageObject_images_OCRImageObject"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}
-  hasExpandableContent={false}
+  hasExpandableContent={true}
   expandByDefault={false}
 >
 
@@ -1186,6 +1228,12 @@ List of all extracted images in the page
 ##### bottom_right_x [#operation-ocr_v1_ocr_post_responses_200_application-json_pages_ocrpageobject_images_ocrimageobject_bottom_right_x]
 
 </ExpandablePropertyTitle>
+
+<ExpandablePropertyDescription slot="description">
+
+X coordinate of bottom-right corner of the extracted image
+
+</ExpandablePropertyDescription>
 
 </ExpandableProperty>
 
@@ -1196,7 +1244,7 @@ List of all extracted images in the page
   parentId="pages_OCRPageObject_images_OCRImageObject"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}
-  hasExpandableContent={false}
+  hasExpandableContent={true}
   expandByDefault={false}
 >
 
@@ -1205,6 +1253,12 @@ List of all extracted images in the page
 ##### bottom_right_y [#operation-ocr_v1_ocr_post_responses_200_application-json_pages_ocrpageobject_images_ocrimageobject_bottom_right_y]
 
 </ExpandablePropertyTitle>
+
+<ExpandablePropertyDescription slot="description">
+
+Y coordinate of bottom-right corner of the extracted image
+
+</ExpandablePropertyDescription>
 
 </ExpandableProperty>
 
@@ -1240,7 +1294,7 @@ Image ID for extracted image in a page
   parentId="pages_OCRPageObject_images_OCRImageObject"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
-  hasExpandableContent={false}
+  hasExpandableContent={true}
   expandByDefault={false}
 >
 
@@ -1249,6 +1303,12 @@ Image ID for extracted image in a page
 ##### image_annotation [#operation-ocr_v1_ocr_post_responses_200_application-json_pages_ocrpageobject_images_ocrimageobject_image_annotation]
 
 </ExpandablePropertyTitle>
+
+<ExpandablePropertyDescription slot="description">
+
+Annotation of the extracted image in json str
+
+</ExpandablePropertyDescription>
 
 </ExpandableProperty>
 
@@ -1259,7 +1319,7 @@ Image ID for extracted image in a page
   parentId="pages_OCRPageObject_images_OCRImageObject"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
-  hasExpandableContent={false}
+  hasExpandableContent={true}
   expandByDefault={false}
 >
 
@@ -1268,6 +1328,12 @@ Image ID for extracted image in a page
 ##### image_base64 [#operation-ocr_v1_ocr_post_responses_200_application-json_pages_ocrpageobject_images_ocrimageobject_image_base64]
 
 </ExpandablePropertyTitle>
+
+<ExpandablePropertyDescription slot="description">
+
+Base64 string of the extracted image
+
+</ExpandablePropertyDescription>
 
 </ExpandableProperty>
 
@@ -1278,7 +1344,7 @@ Image ID for extracted image in a page
   parentId="pages_OCRPageObject_images_OCRImageObject"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}
-  hasExpandableContent={false}
+  hasExpandableContent={true}
   expandByDefault={false}
 >
 
@@ -1287,6 +1353,12 @@ Image ID for extracted image in a page
 ##### top_left_x [#operation-ocr_v1_ocr_post_responses_200_application-json_pages_ocrpageobject_images_ocrimageobject_top_left_x]
 
 </ExpandablePropertyTitle>
+
+<ExpandablePropertyDescription slot="description">
+
+X coordinate of top-left corner of the extracted image
+
+</ExpandablePropertyDescription>
 
 </ExpandableProperty>
 
@@ -1297,7 +1369,7 @@ Image ID for extracted image in a page
   parentId="pages_OCRPageObject_images_OCRImageObject"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}
-  hasExpandableContent={false}
+  hasExpandableContent={true}
   expandByDefault={false}
 >
 
@@ -1306,6 +1378,12 @@ Image ID for extracted image in a page
 ##### top_left_y [#operation-ocr_v1_ocr_post_responses_200_application-json_pages_ocrpageobject_images_ocrimageobject_top_left_y]
 
 </ExpandablePropertyTitle>
+
+<ExpandablePropertyDescription slot="description">
+
+Y coordinate of top-left corner of the extracted image
+
+</ExpandablePropertyDescription>
 
 </ExpandableProperty>
 
@@ -1417,7 +1495,7 @@ The markdown string response of the page
   parentId="usage_info_OCRUsageInfo"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
-  hasExpandableContent={false}
+  hasExpandableContent={true}
   expandByDefault={false}
 >
 
@@ -1426,6 +1504,12 @@ The markdown string response of the page
 ##### doc_size_bytes [#operation-ocr_v1_ocr_post_responses_200_application-json_usage_info_ocrusageinfo_doc_size_bytes]
 
 </ExpandablePropertyTitle>
+
+<ExpandablePropertyDescription slot="description">
+
+Document size in bytes
+
+</ExpandablePropertyDescription>
 
 </ExpandableProperty>
 
