--- a/examples/docusaurus/mistral/docs/api/endpoint/agents.mdx
+++ b/examples/docusaurus/mistral/docs/api/endpoint/agents.mdx
@@ -377,17 +377,7 @@ defaultValue: MyDefaultValue
 
 <ExpandablePropertyDescription slot="description">
 
-<DebugPlaceholder>
-
-No description provided
-
-_OpenAPI example:_
-
-```
-description: My awesome description
-```
-
-</DebugPlaceholder>
+The maximum number of tokens to generate in the completion. The token count of your prompt plus `max_tokens` cannot exceed the model's context length.
 
 </ExpandablePropertyDescription>
 
@@ -1690,17 +1680,7 @@ defaultValue: MyDefaultValue
 
 <ExpandablePropertyDescription slot="description">
 
-<DebugPlaceholder>
-
-No description provided
-
-_OpenAPI example:_
-
-```
-description: My awesome description
-```
-
-</DebugPlaceholder>
+The filename of the document
 
 </ExpandablePropertyDescription>
 
@@ -2942,17 +2922,7 @@ defaultValue: MyDefaultValue
 
 <ExpandablePropertyDescription slot="description">
 
-<DebugPlaceholder>
-
-No description provided
-
-_OpenAPI example:_
-
-```
-description: My awesome description
-```
-
-</DebugPlaceholder>
+The filename of the document
 
 </ExpandablePropertyDescription>
 
@@ -4846,17 +4816,7 @@ defaultValue: MyDefaultValue
 
 <ExpandablePropertyDescription slot="description">
 
-<DebugPlaceholder>
-
-No description provided
-
-_OpenAPI example:_
-
-```
-description: My awesome description
-```
-
-</DebugPlaceholder>
+The filename of the document
 
 </ExpandablePropertyDescription>
 
@@ -5445,17 +5405,7 @@ defaultValue: MyDefaultValue
 
 <ExpandablePropertyDescription slot="description">
 
-<DebugPlaceholder>
-
-No description provided
-
-_OpenAPI example:_
-
-```
-description: My awesome description
-```
-
-</DebugPlaceholder>
+Number of completions to return for each request, input tokens are only billed once.
 
 </ExpandablePropertyDescription>
 
@@ -5960,17 +5910,7 @@ defaultValue: MyDefaultValue
 
 <ExpandablePropertyDescription slot="description">
 
-<DebugPlaceholder>
-
-No description provided
-
-_OpenAPI example:_
-
-```
-description: My awesome description
-```
-
-</DebugPlaceholder>
+The seed to use for random sampling. If set, different calls will generate deterministic results.
 
 </ExpandablePropertyDescription>
 
@@ -8976,17 +8916,7 @@ defaultValue: MyDefaultValue
 
 <ExpandablePropertyDescription slot="description">
 
-<DebugPlaceholder>
-
-No description provided
-
-_OpenAPI example:_
-
-```
-description: My awesome description
-```
-
-</DebugPlaceholder>
+The filename of the document
 
 </ExpandablePropertyDescription>
 
@@ -10952,17 +10882,7 @@ defaultValue: MyDefaultValue
 
 <ExpandablePropertyDescription slot="description">
 
-<DebugPlaceholder>
-
-No description provided
-
-_OpenAPI example:_
-
-```
-description: My awesome description
-```
-
-</DebugPlaceholder>
+The maximum number of tokens to generate in the completion. The token count of your prompt plus `max_tokens` cannot exceed the model's context length.
 
 </ExpandablePropertyDescription>
 
@@ -12265,17 +12185,7 @@ defaultValue: MyDefaultValue
 
 <ExpandablePropertyDescription slot="description">
 
-<DebugPlaceholder>
-
-No description provided
-
-_OpenAPI example:_
-
-```
-description: My awesome description
-```
-
-</DebugPlaceholder>
+The filename of the document
 
 </ExpandablePropertyDescription>
 
@@ -13517,17 +13427,7 @@ defaultValue: MyDefaultValue
 
 <ExpandablePropertyDescription slot="description">
 
-<DebugPlaceholder>
-
-No description provided
-
-_OpenAPI example:_
-
-```
-description: My awesome description
-```
-
-</DebugPlaceholder>
+The filename of the document
 
 </ExpandablePropertyDescription>
 
@@ -15421,17 +15321,7 @@ defaultValue: MyDefaultValue
 
 <ExpandablePropertyDescription slot="description">
 
-<DebugPlaceholder>
-
-No description provided
-
-_OpenAPI example:_
-
-```
-description: My awesome description
-```
-
-</DebugPlaceholder>
+The filename of the document
 
 </ExpandablePropertyDescription>
 
@@ -16020,17 +15910,7 @@ defaultValue: MyDefaultValue
 
 <ExpandablePropertyDescription slot="description">
 
-<DebugPlaceholder>
-
-No description provided
-
-_OpenAPI example:_
-
-```
-description: My awesome description
-```
-
-</DebugPlaceholder>
+Number of completions to return for each request, input tokens are only billed once.
 
 </ExpandablePropertyDescription>
 
@@ -16535,17 +16415,7 @@ defaultValue: MyDefaultValue
 
 <ExpandablePropertyDescription slot="description">
 
-<DebugPlaceholder>
-
-No description provided
-
-_OpenAPI example:_
-
-```
-description: My awesome description
-```
-
-</DebugPlaceholder>
+The seed to use for random sampling. If set, different calls will generate deterministic results.
 
 </ExpandablePropertyDescription>
 
@@ -19635,17 +19505,7 @@ defaultValue: MyDefaultValue
 
 <ExpandablePropertyDescription slot="description">
 
-<DebugPlaceholder>
-
-No description provided
-
-_OpenAPI example:_
-
-```
-description: My awesome description
-```
-
-</DebugPlaceholder>
+The filename of the document
 
 </ExpandablePropertyDescription>
 
