--- a/examples/nextra/mistral/src/app/api/endpoint/agents/page.mdx
+++ b/examples/nextra/mistral/src/app/api/endpoint/agents/page.mdx
@@ -226,7 +226,7 @@ frequency_penalty penalizes the repetition of words based on their frequency in 
   headingId="operation-agents_completion_v1_agents_completions_post_request_max_tokens"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
-  hasExpandableContent={false}
+  hasExpandableContent={true}
   expandByDefault={true}
 >
 
@@ -235,6 +235,12 @@ frequency_penalty penalizes the repetition of words based on their frequency in 
 ##### max_tokens [#operation-agents_completion_v1_agents_completions_post_request_max_tokens]
 
 </ExpandablePropertyTitle>
+
+<ExpandablePropertyDescription slot="description">
+
+The maximum number of tokens to generate in the completion. The token count of your prompt plus `max_tokens` cannot exceed the model's context length.
+
+</ExpandablePropertyDescription>
 
 </ExpandableProperty>
 
@@ -655,7 +661,7 @@ _Default Value:_ `"image_url"`
   parentId="messages_UserMessage_content_DocumentURLChunk"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
-  hasExpandableContent={false}
+  hasExpandableContent={true}
   expandByDefault={false}
 >
 
@@ -664,6 +670,12 @@ _Default Value:_ `"image_url"`
 ##### document_name [#operation-agents_completion_v1_agents_completions_post_request_messages_usermessage_content_documenturlchunk_document_name]
 
 </ExpandablePropertyTitle>
+
+<ExpandablePropertyDescription slot="description">
+
+The filename of the document
+
+</ExpandablePropertyDescription>
 
 </ExpandableProperty>
 
@@ -1072,7 +1084,7 @@ _Default Value:_ `"image_url"`
   parentId="messages_AssistantMessage_content_DocumentURLChunk"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
-  hasExpandableContent={false}
+  hasExpandableContent={true}
   expandByDefault={false}
 >
 
@@ -1081,6 +1093,12 @@ _Default Value:_ `"image_url"`
 ##### document_name [#operation-agents_completion_v1_agents_completions_post_request_messages_assistantmessage_content_documenturlchunk_document_name]
 
 </ExpandablePropertyTitle>
+
+<ExpandablePropertyDescription slot="description">
+
+The filename of the document
+
+</ExpandablePropertyDescription>
 
 </ExpandableProperty>
 
@@ -1715,7 +1733,7 @@ _Default Value:_ `"image_url"`
   parentId="messages_ToolMessage_content_DocumentURLChunk"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
-  hasExpandableContent={false}
+  hasExpandableContent={true}
   expandByDefault={false}
 >
 
@@ -1724,6 +1742,12 @@ _Default Value:_ `"image_url"`
 ##### document_name [#operation-agents_completion_v1_agents_completions_post_request_messages_toolmessage_content_documenturlchunk_document_name]
 
 </ExpandablePropertyTitle>
+
+<ExpandablePropertyDescription slot="description">
+
+The filename of the document
+
+</ExpandablePropertyDescription>
 
 </ExpandableProperty>
 
@@ -1921,7 +1945,7 @@ _Default Value:_ `"tool"`
   headingId="operation-agents_completion_v1_agents_completions_post_request_n"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
-  hasExpandableContent={false}
+  hasExpandableContent={true}
   expandByDefault={true}
 >
 
@@ -1930,6 +1954,12 @@ _Default Value:_ `"tool"`
 ##### n [#operation-agents_completion_v1_agents_completions_post_request_n]
 
 </ExpandablePropertyTitle>
+
+<ExpandablePropertyDescription slot="description">
+
+Number of completions to return for each request, input tokens are only billed once.
+
+</ExpandablePropertyDescription>
 
 </ExpandableProperty>
 
@@ -2092,7 +2122,7 @@ presence_penalty determines how much the model penalizes the repetition of words
   headingId="operation-agents_completion_v1_agents_completions_post_request_random_seed"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
-  hasExpandableContent={false}
+  hasExpandableContent={true}
   expandByDefault={true}
 >
 
@@ -2101,6 +2131,12 @@ presence_penalty determines how much the model penalizes the repetition of words
 ##### random_seed [#operation-agents_completion_v1_agents_completions_post_request_random_seed]
 
 </ExpandablePropertyTitle>
+
+<ExpandablePropertyDescription slot="description">
+
+The seed to use for random sampling. If set, different calls will generate deterministic results.
+
+</ExpandablePropertyDescription>
 
 </ExpandableProperty>
 
@@ -3082,7 +3118,7 @@ _Default Value:_ `"image_url"`
   parentId="choices_ChatCompletionChoice_message_AssistantMessage_content_DocumentURLChunk"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
-  hasExpandableContent={false}
+  hasExpandableContent={true}
   expandByDefault={false}
 >
 
@@ -3091,6 +3127,12 @@ _Default Value:_ `"image_url"`
 ##### document_name [#operation-agents_completion_v1_agents_completions_post_responses_200_application-json_choices_chatcompletionchoice_message_assistantmessage_content_documenturlchunk_document_name]
 
 </ExpandablePropertyTitle>
+
+<ExpandablePropertyDescription slot="description">
+
+The filename of the document
+
+</ExpandablePropertyDescription>
 
 </ExpandableProperty>
 
@@ -3899,7 +3941,7 @@ frequency_penalty penalizes the repetition of words based on their frequency in 
   headingId="operation-stream_agents_request_max_tokens"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
-  hasExpandableContent={false}
+  hasExpandableContent={true}
   expandByDefault={true}
 >
 
@@ -3908,6 +3950,12 @@ frequency_penalty penalizes the repetition of words based on their frequency in 
 ##### max_tokens [#operation-stream_agents_request_max_tokens]
 
 </ExpandablePropertyTitle>
+
+<ExpandablePropertyDescription slot="description">
+
+The maximum number of tokens to generate in the completion. The token count of your prompt plus `max_tokens` cannot exceed the model's context length.
+
+</ExpandablePropertyDescription>
 
 </ExpandableProperty>
 
@@ -4328,7 +4376,7 @@ _Default Value:_ `"image_url"`
   parentId="messages_UserMessage_content_DocumentURLChunk"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
-  hasExpandableContent={false}
+  hasExpandableContent={true}
   expandByDefault={false}
 >
 
@@ -4337,6 +4385,12 @@ _Default Value:_ `"image_url"`
 ##### document_name [#operation-stream_agents_request_messages_usermessage_content_documenturlchunk_document_name]
 
 </ExpandablePropertyTitle>
+
+<ExpandablePropertyDescription slot="description">
+
+The filename of the document
+
+</ExpandablePropertyDescription>
 
 </ExpandableProperty>
 
@@ -4745,7 +4799,7 @@ _Default Value:_ `"image_url"`
   parentId="messages_AssistantMessage_content_DocumentURLChunk"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
-  hasExpandableContent={false}
+  hasExpandableContent={true}
   expandByDefault={false}
 >
 
@@ -4754,6 +4808,12 @@ _Default Value:_ `"image_url"`
 ##### document_name [#operation-stream_agents_request_messages_assistantmessage_content_documenturlchunk_document_name]
 
 </ExpandablePropertyTitle>
+
+<ExpandablePropertyDescription slot="description">
+
+The filename of the document
+
+</ExpandablePropertyDescription>
 
 </ExpandableProperty>
 
@@ -5388,7 +5448,7 @@ _Default Value:_ `"image_url"`
   parentId="messages_ToolMessage_content_DocumentURLChunk"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
-  hasExpandableContent={false}
+  hasExpandableContent={true}
   expandByDefault={false}
 >
 
@@ -5397,6 +5457,12 @@ _Default Value:_ `"image_url"`
 ##### document_name [#operation-stream_agents_request_messages_toolmessage_content_documenturlchunk_document_name]
 
 </ExpandablePropertyTitle>
+
+<ExpandablePropertyDescription slot="description">
+
+The filename of the document
+
+</ExpandablePropertyDescription>
 
 </ExpandableProperty>
 
@@ -5594,7 +5660,7 @@ _Default Value:_ `"tool"`
   headingId="operation-stream_agents_request_n"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
-  hasExpandableContent={false}
+  hasExpandableContent={true}
   expandByDefault={true}
 >
 
@@ -5603,6 +5669,12 @@ _Default Value:_ `"tool"`
 ##### n [#operation-stream_agents_request_n]
 
 </ExpandablePropertyTitle>
+
+<ExpandablePropertyDescription slot="description">
+
+Number of completions to return for each request, input tokens are only billed once.
+
+</ExpandablePropertyDescription>
 
 </ExpandableProperty>
 
@@ -5765,7 +5837,7 @@ presence_penalty determines how much the model penalizes the repetition of words
   headingId="operation-stream_agents_request_random_seed"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
-  hasExpandableContent={false}
+  hasExpandableContent={true}
   expandByDefault={true}
 >
 
@@ -5774,6 +5846,12 @@ presence_penalty determines how much the model penalizes the repetition of words
 ##### random_seed [#operation-stream_agents_request_random_seed]
 
 </ExpandablePropertyTitle>
+
+<ExpandablePropertyDescription slot="description">
+
+The seed to use for random sampling. If set, different calls will generate deterministic results.
+
+</ExpandablePropertyDescription>
 
 </ExpandableProperty>
 
@@ -6746,7 +6824,7 @@ _Default Value:_ `"image_url"`
   parentId="CompletionEvent_data_CompletionChunk_choices_CompletionResponseStreamChoice_delta_DeltaMessage_content_DocumentURLChunk"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
-  hasExpandableContent={false}
+  hasExpandableContent={true}
   expandByDefault={false}
 >
 
@@ -6755,6 +6833,12 @@ _Default Value:_ `"image_url"`
 ##### document_name [#operation-stream_agents_responses_200_text-event-stream_completionevent_data_completionchunk_choices_completionresponsestreamchoice_delta_deltamessage_content_documenturlchunk_document_name]
 
 </ExpandablePropertyTitle>
+
+<ExpandablePropertyDescription slot="description">
+
+The filename of the document
+
+</ExpandablePropertyDescription>
 
 </ExpandableProperty>
 
