--- a/examples/nextra/mistral/src/app/api/endpoint/beta/agents/page.mdx
+++ b/examples/nextra/mistral/src/app/api/endpoint/beta/agents/page.mdx
@@ -841,7 +841,7 @@ _Default Value:_ `0.3`
   parentId="Agent"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
-  hasExpandableContent={false}
+  hasExpandableContent={true}
   expandByDefault={false}
 >
 
@@ -850,6 +850,12 @@ _Default Value:_ `0.3`
 ##### instructions [#operation-agents_api_v1_agents_list_responses_200_application-json_agent_instructions]
 
 </ExpandablePropertyTitle>
+
+<ExpandablePropertyDescription slot="description">
+
+Instruction prompt the model will follow during the conversation.
+
+</ExpandablePropertyDescription>
 
 </ExpandableProperty>
 
@@ -2060,7 +2066,7 @@ _Default Value:_ `0.3`
   headingId="operation-agents_api_v1_agents_create_request_instructions"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
-  hasExpandableContent={false}
+  hasExpandableContent={true}
   expandByDefault={true}
 >
 
@@ -2069,6 +2075,12 @@ _Default Value:_ `0.3`
 ##### instructions [#operation-agents_api_v1_agents_create_request_instructions]
 
 </ExpandablePropertyTitle>
+
+<ExpandablePropertyDescription slot="description">
+
+Instruction prompt the model will follow during the conversation.
+
+</ExpandablePropertyDescription>
 
 </ExpandableProperty>
 
@@ -3171,7 +3183,7 @@ _Default Value:_ `0.3`
   headingId="operation-agents_api_v1_agents_create_responses_200_application-json_instructions"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
-  hasExpandableContent={false}
+  hasExpandableContent={true}
   expandByDefault={true}
 >
 
@@ -3180,6 +3192,12 @@ _Default Value:_ `0.3`
 ##### instructions [#operation-agents_api_v1_agents_create_responses_200_application-json_instructions]
 
 </ExpandablePropertyTitle>
+
+<ExpandablePropertyDescription slot="description">
+
+Instruction prompt the model will follow during the conversation.
+
+</ExpandablePropertyDescription>
 
 </ExpandableProperty>
 
@@ -4474,7 +4492,7 @@ _Default Value:_ `0.3`
   headingId="operation-agents_api_v1_agents_get_responses_200_application-json_instructions"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
-  hasExpandableContent={false}
+  hasExpandableContent={true}
   expandByDefault={true}
 >
 
@@ -4483,6 +4501,12 @@ _Default Value:_ `0.3`
 ##### instructions [#operation-agents_api_v1_agents_get_responses_200_application-json_instructions]
 
 </ExpandablePropertyTitle>
+
+<ExpandablePropertyDescription slot="description">
+
+Instruction prompt the model will follow during the conversation.
+
+</ExpandablePropertyDescription>
 
 </ExpandableProperty>
 
@@ -5727,7 +5751,7 @@ _Default Value:_ `0.3`
   headingId="operation-agents_api_v1_agents_update_request_instructions"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
-  hasExpandableContent={false}
+  hasExpandableContent={true}
   expandByDefault={true}
 >
 
@@ -5736,6 +5760,12 @@ _Default Value:_ `0.3`
 ##### instructions [#operation-agents_api_v1_agents_update_request_instructions]
 
 </ExpandablePropertyTitle>
+
+<ExpandablePropertyDescription slot="description">
+
+Instruction prompt the model will follow during the conversation.
+
+</ExpandablePropertyDescription>
 
 </ExpandableProperty>
 
@@ -6838,7 +6868,7 @@ _Default Value:_ `0.3`
   headingId="operation-agents_api_v1_agents_update_responses_200_application-json_instructions"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
-  hasExpandableContent={false}
+  hasExpandableContent={true}
   expandByDefault={true}
 >
 
@@ -6847,6 +6877,12 @@ _Default Value:_ `0.3`
 ##### instructions [#operation-agents_api_v1_agents_update_responses_200_application-json_instructions]
 
 </ExpandablePropertyTitle>
+
+<ExpandablePropertyDescription slot="description">
+
+Instruction prompt the model will follow during the conversation.
+
+</ExpandablePropertyDescription>
 
 </ExpandableProperty>
 
@@ -8176,7 +8212,7 @@ _Default Value:_ `0.3`
   headingId="operation-agents_api_v1_agents_update_version_responses_200_application-json_instructions"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
-  hasExpandableContent={false}
+  hasExpandableContent={true}
   expandByDefault={true}
 >
 
@@ -8185,6 +8221,12 @@ _Default Value:_ `0.3`
 ##### instructions [#operation-agents_api_v1_agents_update_version_responses_200_application-json_instructions]
 
 </ExpandablePropertyTitle>
+
+<ExpandablePropertyDescription slot="description">
+
+Instruction prompt the model will follow during the conversation.
+
+</ExpandablePropertyDescription>
 
 </ExpandableProperty>
 
