--- a/examples/nextra/mistral/src/app/api/endpoint/chat/page.mdx
+++ b/examples/nextra/mistral/src/app/api/endpoint/chat/page.mdx
@@ -202,7 +202,7 @@ frequency_penalty penalizes the repetition of words based on their frequency in 
   headingId="operation-chat_completion_v1_chat_completions_post_request_max_tokens"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
-  hasExpandableContent={false}
+  hasExpandableContent={true}
   expandByDefault={true}
 >
 
@@ -211,6 +211,12 @@ frequency_penalty penalizes the repetition of words based on their frequency in 
 ##### max_tokens [#operation-chat_completion_v1_chat_completions_post_request_max_tokens]
 
 </ExpandablePropertyTitle>
+
+<ExpandablePropertyDescription slot="description">
+
+The maximum number of tokens to generate in the completion. The token count of your prompt plus `max_tokens` cannot exceed the model's context length.
+
+</ExpandablePropertyDescription>
 
 </ExpandableProperty>
 
@@ -631,7 +637,7 @@ _Default Value:_ `"image_url"`
   parentId="messages_UserMessage_content_DocumentURLChunk"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
-  hasExpandableContent={false}
+  hasExpandableContent={true}
   expandByDefault={false}
 >
 
@@ -640,6 +646,12 @@ _Default Value:_ `"image_url"`
 ##### document_name [#operation-chat_completion_v1_chat_completions_post_request_messages_usermessage_content_documenturlchunk_document_name]
 
 </ExpandablePropertyTitle>
+
+<ExpandablePropertyDescription slot="description">
+
+The filename of the document
+
+</ExpandablePropertyDescription>
 
 </ExpandableProperty>
 
@@ -1048,7 +1060,7 @@ _Default Value:_ `"image_url"`
   parentId="messages_AssistantMessage_content_DocumentURLChunk"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
-  hasExpandableContent={false}
+  hasExpandableContent={true}
   expandByDefault={false}
 >
 
@@ -1057,6 +1069,12 @@ _Default Value:_ `"image_url"`
 ##### document_name [#operation-chat_completion_v1_chat_completions_post_request_messages_assistantmessage_content_documenturlchunk_document_name]
 
 </ExpandablePropertyTitle>
+
+<ExpandablePropertyDescription slot="description">
+
+The filename of the document
+
+</ExpandablePropertyDescription>
 
 </ExpandableProperty>
 
@@ -1691,7 +1709,7 @@ _Default Value:_ `"image_url"`
   parentId="messages_ToolMessage_content_DocumentURLChunk"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
-  hasExpandableContent={false}
+  hasExpandableContent={true}
   expandByDefault={false}
 >
 
@@ -1700,6 +1718,12 @@ _Default Value:_ `"image_url"`
 ##### document_name [#operation-chat_completion_v1_chat_completions_post_request_messages_toolmessage_content_documenturlchunk_document_name]
 
 </ExpandablePropertyTitle>
+
+<ExpandablePropertyDescription slot="description">
+
+The filename of the document
+
+</ExpandablePropertyDescription>
 
 </ExpandableProperty>
 
@@ -1931,7 +1955,7 @@ mistral-small-latest
   headingId="operation-chat_completion_v1_chat_completions_post_request_n"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
-  hasExpandableContent={false}
+  hasExpandableContent={true}
   expandByDefault={true}
 >
 
@@ -1940,6 +1964,12 @@ mistral-small-latest
 ##### n [#operation-chat_completion_v1_chat_completions_post_request_n]
 
 </ExpandablePropertyTitle>
+
+<ExpandablePropertyDescription slot="description">
+
+Number of completions to return for each request, input tokens are only billed once.
+
+</ExpandablePropertyDescription>
 
 </ExpandableProperty>
 
@@ -2102,7 +2132,7 @@ presence_penalty determines how much the model penalizes the repetition of words
   headingId="operation-chat_completion_v1_chat_completions_post_request_random_seed"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
-  hasExpandableContent={false}
+  hasExpandableContent={true}
   expandByDefault={true}
 >
 
@@ -2111,6 +2141,12 @@ presence_penalty determines how much the model penalizes the repetition of words
 ##### random_seed [#operation-chat_completion_v1_chat_completions_post_request_random_seed]
 
 </ExpandablePropertyTitle>
+
+<ExpandablePropertyDescription slot="description">
+
+The seed to use for random sampling. If set, different calls will generate deterministic results.
+
+</ExpandablePropertyDescription>
 
 </ExpandableProperty>
 
@@ -2386,7 +2422,7 @@ _Default Value:_ `false`
   headingId="operation-chat_completion_v1_chat_completions_post_request_temperature"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"number","linkedLabel":"number","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
-  hasExpandableContent={false}
+  hasExpandableContent={true}
   expandByDefault={true}
 >
 
@@ -2395,6 +2431,12 @@ _Default Value:_ `false`
 ##### temperature [#operation-chat_completion_v1_chat_completions_post_request_temperature]
 
 </ExpandablePropertyTitle>
+
+<ExpandablePropertyDescription slot="description">
+
+What sampling temperature to use, we recommend between 0.0 and 0.7. Higher values like 0.7 will make the output more random, while lower values like 0.2 will make it more focused and deterministic. We generally recommend altering this or `top_p` but not both. The default value varies depending on the model you are targeting. Call the `/models` endpoint to retrieve the appropriate value.
+
+</ExpandablePropertyDescription>
 
 </ExpandableProperty>
 
@@ -3158,7 +3200,7 @@ _Default Value:_ `"image_url"`
   parentId="choices_ChatCompletionChoice_message_AssistantMessage_content_DocumentURLChunk"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
-  hasExpandableContent={false}
+  hasExpandableContent={true}
   expandByDefault={false}
 >
 
@@ -3167,6 +3209,12 @@ _Default Value:_ `"image_url"`
 ##### document_name [#operation-chat_completion_v1_chat_completions_post_responses_200_application-json_choices_chatcompletionchoice_message_assistantmessage_content_documenturlchunk_document_name]
 
 </ExpandablePropertyTitle>
+
+<ExpandablePropertyDescription slot="description">
+
+The filename of the document
+
+</ExpandablePropertyDescription>
 
 </ExpandableProperty>
 
@@ -3951,7 +3999,7 @@ frequency_penalty penalizes the repetition of words based on their frequency in 
   headingId="operation-stream_chat_request_max_tokens"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
-  hasExpandableContent={false}
+  hasExpandableContent={true}
   expandByDefault={true}
 >
 
@@ -3960,6 +4008,12 @@ frequency_penalty penalizes the repetition of words based on their frequency in 
 ##### max_tokens [#operation-stream_chat_request_max_tokens]
 
 </ExpandablePropertyTitle>
+
+<ExpandablePropertyDescription slot="description">
+
+The maximum number of tokens to generate in the completion. The token count of your prompt plus `max_tokens` cannot exceed the model's context length.
+
+</ExpandablePropertyDescription>
 
 </ExpandableProperty>
 
@@ -4380,7 +4434,7 @@ _Default Value:_ `"image_url"`
   parentId="messages_UserMessage_content_DocumentURLChunk"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
-  hasExpandableContent={false}
+  hasExpandableContent={true}
   expandByDefault={false}
 >
 
@@ -4389,6 +4443,12 @@ _Default Value:_ `"image_url"`
 ##### document_name [#operation-stream_chat_request_messages_usermessage_content_documenturlchunk_document_name]
 
 </ExpandablePropertyTitle>
+
+<ExpandablePropertyDescription slot="description">
+
+The filename of the document
+
+</ExpandablePropertyDescription>
 
 </ExpandableProperty>
 
@@ -4797,7 +4857,7 @@ _Default Value:_ `"image_url"`
   parentId="messages_AssistantMessage_content_DocumentURLChunk"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
-  hasExpandableContent={false}
+  hasExpandableContent={true}
   expandByDefault={false}
 >
 
@@ -4806,6 +4866,12 @@ _Default Value:_ `"image_url"`
 ##### document_name [#operation-stream_chat_request_messages_assistantmessage_content_documenturlchunk_document_name]
 
 </ExpandablePropertyTitle>
+
+<ExpandablePropertyDescription slot="description">
+
+The filename of the document
+
+</ExpandablePropertyDescription>
 
 </ExpandableProperty>
 
@@ -5440,7 +5506,7 @@ _Default Value:_ `"image_url"`
   parentId="messages_ToolMessage_content_DocumentURLChunk"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
-  hasExpandableContent={false}
+  hasExpandableContent={true}
   expandByDefault={false}
 >
 
@@ -5449,6 +5515,12 @@ _Default Value:_ `"image_url"`
 ##### document_name [#operation-stream_chat_request_messages_toolmessage_content_documenturlchunk_document_name]
 
 </ExpandablePropertyTitle>
+
+<ExpandablePropertyDescription slot="description">
+
+The filename of the document
+
+</ExpandablePropertyDescription>
 
 </ExpandableProperty>
 
@@ -5680,7 +5752,7 @@ mistral-small-latest
   headingId="operation-stream_chat_request_n"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
-  hasExpandableContent={false}
+  hasExpandableContent={true}
   expandByDefault={true}
 >
 
@@ -5689,6 +5761,12 @@ mistral-small-latest
 ##### n [#operation-stream_chat_request_n]
 
 </ExpandablePropertyTitle>
+
+<ExpandablePropertyDescription slot="description">
+
+Number of completions to return for each request, input tokens are only billed once.
+
+</ExpandablePropertyDescription>
 
 </ExpandableProperty>
 
@@ -5851,7 +5929,7 @@ presence_penalty determines how much the model penalizes the repetition of words
   headingId="operation-stream_chat_request_random_seed"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
-  hasExpandableContent={false}
+  hasExpandableContent={true}
   expandByDefault={true}
 >
 
@@ -5860,6 +5938,12 @@ presence_penalty determines how much the model penalizes the repetition of words
 ##### random_seed [#operation-stream_chat_request_random_seed]
 
 </ExpandablePropertyTitle>
+
+<ExpandablePropertyDescription slot="description">
+
+The seed to use for random sampling. If set, different calls will generate deterministic results.
+
+</ExpandablePropertyDescription>
 
 </ExpandableProperty>
 
@@ -6129,7 +6213,7 @@ _Default Value:_ `true`
   headingId="operation-stream_chat_request_temperature"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"number","linkedLabel":"number","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
-  hasExpandableContent={false}
+  hasExpandableContent={true}
   expandByDefault={true}
 >
 
@@ -6138,6 +6222,12 @@ _Default Value:_ `true`
 ##### temperature [#operation-stream_chat_request_temperature]
 
 </ExpandablePropertyTitle>
+
+<ExpandablePropertyDescription slot="description">
+
+What sampling temperature to use, we recommend between 0.0 and 0.7. Higher values like 0.7 will make the output more random, while lower values like 0.2 will make it more focused and deterministic. We generally recommend altering this or `top_p` but not both. The default value varies depending on the model you are targeting. Call the `/models` endpoint to retrieve the appropriate value.
+
+</ExpandablePropertyDescription>
 
 </ExpandableProperty>
 
@@ -6898,7 +6988,7 @@ _Default Value:_ `"image_url"`
   parentId="CompletionEvent_data_CompletionChunk_choices_CompletionResponseStreamChoice_delta_DeltaMessage_content_DocumentURLChunk"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
-  hasExpandableContent={false}
+  hasExpandableContent={true}
   expandByDefault={false}
 >
 
@@ -6907,6 +6997,12 @@ _Default Value:_ `"image_url"`
 ##### document_name [#operation-stream_chat_responses_200_text-event-stream_completionevent_data_completionchunk_choices_completionresponsestreamchoice_delta_deltamessage_content_documenturlchunk_document_name]
 
 </ExpandablePropertyTitle>
+
+<ExpandablePropertyDescription slot="description">
+
+The filename of the document
+
+</ExpandablePropertyDescription>
 
 </ExpandableProperty>
 
