--- a/examples/nextra/mistral/src/app/api/endpoint/fim/page.mdx
+++ b/examples/nextra/mistral/src/app/api/endpoint/fim/page.mdx
@@ -175,7 +175,7 @@ with Mistral(
   headingId="operation-fim_completion_v1_fim_completions_post_request_max_tokens"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
-  hasExpandableContent={false}
+  hasExpandableContent={true}
   expandByDefault={true}
 >
 
@@ -185,6 +185,12 @@ with Mistral(
 
 </ExpandablePropertyTitle>
 
+<ExpandablePropertyDescription slot="description">
+
+The maximum number of tokens to generate in the completion. The token count of your prompt plus `max_tokens` cannot exceed the model's context length.
+
+</ExpandablePropertyDescription>
+
 </ExpandableProperty>
 
 <ExpandableProperty
@@ -193,7 +199,7 @@ with Mistral(
   headingId="operation-fim_completion_v1_fim_completions_post_request_min_tokens"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
-  hasExpandableContent={false}
+  hasExpandableContent={true}
   expandByDefault={true}
 >
 
@@ -202,6 +208,12 @@ with Mistral(
 ##### min_tokens [#operation-fim_completion_v1_fim_completions_post_request_min_tokens]
 
 </ExpandablePropertyTitle>
+
+<ExpandablePropertyDescription slot="description">
+
+The minimum number of tokens to generate in the completion.
+
+</ExpandablePropertyDescription>
 
 </ExpandableProperty>
 
@@ -281,7 +293,7 @@ def
   headingId="operation-fim_completion_v1_fim_completions_post_request_random_seed"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
-  hasExpandableContent={false}
+  hasExpandableContent={true}
   expandByDefault={true}
 >
 
@@ -290,6 +302,12 @@ def
 ##### random_seed [#operation-fim_completion_v1_fim_completions_post_request_random_seed]
 
 </ExpandablePropertyTitle>
+
+<ExpandablePropertyDescription slot="description">
+
+The seed to use for random sampling. If set, different calls will generate deterministic results.
+
+</ExpandablePropertyDescription>
 
 </ExpandableProperty>
 
@@ -363,6 +381,12 @@ _Default Value:_ `false`
 
 </ExpandablePropertyTitle>
 
+<ExpandablePropertyDescription slot="description">
+
+Optional text/code that adds more context for the model. When given a `prompt` and a `suffix` the model will fill what is between them. When `suffix` is not provided, the model will simply execute completion starting with `prompt`.
+
+</ExpandablePropertyDescription>
+
 <ExpandablePropertyExamples slot="examples">
 
 _Example:_
@@ -381,7 +405,7 @@ return a+b
   headingId="operation-fim_completion_v1_fim_completions_post_request_temperature"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"number","linkedLabel":"number","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
-  hasExpandableContent={false}
+  hasExpandableContent={true}
   expandByDefault={true}
 >
 
@@ -390,6 +414,12 @@ return a+b
 ##### temperature [#operation-fim_completion_v1_fim_completions_post_request_temperature]
 
 </ExpandablePropertyTitle>
+
+<ExpandablePropertyDescription slot="description">
+
+What sampling temperature to use, we recommend between 0.0 and 0.7. Higher values like 0.7 will make the output more random, while lower values like 0.2 will make it more focused and deterministic. We generally recommend altering this or `top_p` but not both. The default value varies depending on the model you are targeting. Call the `/models` endpoint to retrieve the appropriate value.
+
+</ExpandablePropertyDescription>
 
 </ExpandableProperty>
 
@@ -834,7 +864,7 @@ _Default Value:_ `"image_url"`
   parentId="choices_ChatCompletionChoice_message_AssistantMessage_content_DocumentURLChunk"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
-  hasExpandableContent={false}
+  hasExpandableContent={true}
   expandByDefault={false}
 >
 
@@ -843,6 +873,12 @@ _Default Value:_ `"image_url"`
 ##### document_name [#operation-fim_completion_v1_fim_completions_post_responses_200_application-json_choices_chatcompletionchoice_message_assistantmessage_content_documenturlchunk_document_name]
 
 </ExpandablePropertyTitle>
+
+<ExpandablePropertyDescription slot="description">
+
+The filename of the document
+
+</ExpandablePropertyDescription>
 
 </ExpandableProperty>
 
@@ -1594,7 +1630,7 @@ with Mistral(
   headingId="operation-stream_fim_request_max_tokens"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
-  hasExpandableContent={false}
+  hasExpandableContent={true}
   expandByDefault={true}
 >
 
@@ -1604,6 +1640,12 @@ with Mistral(
 
 </ExpandablePropertyTitle>
 
+<ExpandablePropertyDescription slot="description">
+
+The maximum number of tokens to generate in the completion. The token count of your prompt plus `max_tokens` cannot exceed the model's context length.
+
+</ExpandablePropertyDescription>
+
 </ExpandableProperty>
 
 <ExpandableProperty
@@ -1612,7 +1654,7 @@ with Mistral(
   headingId="operation-stream_fim_request_min_tokens"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
-  hasExpandableContent={false}
+  hasExpandableContent={true}
   expandByDefault={true}
 >
 
@@ -1621,6 +1663,12 @@ with Mistral(
 ##### min_tokens [#operation-stream_fim_request_min_tokens]
 
 </ExpandablePropertyTitle>
+
+<ExpandablePropertyDescription slot="description">
+
+The minimum number of tokens to generate in the completion.
+
+</ExpandablePropertyDescription>
 
 </ExpandableProperty>
 
@@ -1700,7 +1748,7 @@ def
   headingId="operation-stream_fim_request_random_seed"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
-  hasExpandableContent={false}
+  hasExpandableContent={true}
   expandByDefault={true}
 >
 
@@ -1709,6 +1757,12 @@ def
 ##### random_seed [#operation-stream_fim_request_random_seed]
 
 </ExpandablePropertyTitle>
+
+<ExpandablePropertyDescription slot="description">
+
+The seed to use for random sampling. If set, different calls will generate deterministic results.
+
+</ExpandablePropertyDescription>
 
 </ExpandableProperty>
 
@@ -1776,6 +1830,12 @@ _Default Value:_ `true`
 
 </ExpandablePropertyTitle>
 
+<ExpandablePropertyDescription slot="description">
+
+Optional text/code that adds more context for the model. When given a `prompt` and a `suffix` the model will fill what is between them. When `suffix` is not provided, the model will simply execute completion starting with `prompt`.
+
+</ExpandablePropertyDescription>
+
 <ExpandablePropertyExamples slot="examples">
 
 _Example:_
@@ -1794,7 +1854,7 @@ return a+b
   headingId="operation-stream_fim_request_temperature"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"number","linkedLabel":"number","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
-  hasExpandableContent={false}
+  hasExpandableContent={true}
   expandByDefault={true}
 >
 
@@ -1803,6 +1863,12 @@ return a+b
 ##### temperature [#operation-stream_fim_request_temperature]
 
 </ExpandablePropertyTitle>
+
+<ExpandablePropertyDescription slot="description">
+
+What sampling temperature to use, we recommend between 0.0 and 0.7. Higher values like 0.7 will make the output more random, while lower values like 0.2 will make it more focused and deterministic. We generally recommend altering this or `top_p` but not both. The default value varies depending on the model you are targeting. Call the `/models` endpoint to retrieve the appropriate value.
+
+</ExpandablePropertyDescription>
 
 </ExpandableProperty>
 
@@ -2244,7 +2310,7 @@ _Default Value:_ `"image_url"`
   parentId="CompletionEvent_data_CompletionChunk_choices_CompletionResponseStreamChoice_delta_DeltaMessage_content_DocumentURLChunk"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
-  hasExpandableContent={false}
+  hasExpandableContent={true}
   expandByDefault={false}
 >
 
@@ -2253,6 +2319,12 @@ _Default Value:_ `"image_url"`
 ##### document_name [#operation-stream_fim_responses_200_text-event-stream_completionevent_data_completionchunk_choices_completionresponsestreamchoice_delta_deltamessage_content_documenturlchunk_document_name]
 
 </ExpandablePropertyTitle>
+
+<ExpandablePropertyDescription slot="description">
+
+The filename of the document
+
+</ExpandablePropertyDescription>
 
 </ExpandableProperty>
 
